--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,19 +1,18 @@
 ---
-title: 江泽明为什么要弄死成克杰
+title: 一灯能除千年暗 一智能灭万年愚
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923309/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923386/)
 
-#### 编辑/整理：澳雅大直播工作组视频剪辑小队
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-发布：陶子
+1月19日，郭文贵先生在GTV大直播指出：
 
-更多资讯，请关注：
-澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena
-澳大利亚墨尔本农场Gettr：himalayaathena
-澳大利亚墨尔本雅典娜农场YouTube
-澳大利亚墨尔本雅典娜农场Discord
-澳大利亚墨尔本雅典娜农场GTV直播1台
+达沃斯论坛私下热议，新中国联邦是否会被各国突然接受，成为代表中国人民的政府；喜币是否会在世界上全面流通。若喜币全面流通，达沃斯党百年金融计划将宣布破产。何为百年金融计划？就是把数字货币化的权力操控在达沃斯手里。喜币和新中国联邦合璧，犹如黑暗中的明灯，令习近平和达沃斯感到恐惧。
 
+*编辑：东京樱花团/墨然
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
