--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,21 +1,20 @@
 ---
-title: 港府五招强推安老残疾院舍接种率
+title: 四分之一的青少年有Covid抑郁症症状
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923295/)
+`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1923375/)
 
-作者：东京樱花团丨阿恩
-![](https://lh5.googleusercontent.com/Ygaezj4ZdU_XFKgShiPIbZXuu3faJT251VYmf-CyPvE6u_FDExPigGg9MsqV-8B4hRjFGUpuCXERS0K8RXM3zO8CvcoS0MVjHApbl1qJlZpmeXjp8iMJFTdDHtcD62LMGKyT2Yat)
-香港公务员事务局局长聂德权称，安老院或残疾人士院舍院友的中共病毒疫苗接种率只有26%，港府决定采取加强措施。首先，所有院舍把院友健康记录交予医生评估；第二，评估为合适接种、且能清楚表达同意的院友，将被接种；第三，监护人或家人须在指定时间内以书面形式表示反对。第四，没有法定监护人、且未能表达同意的院友，由医生判断；第五，从指定日起所有新入住人士，均须已经接种一针疫苗，除非获医生证明不适合接种。
+翻译、整理：萧亦
+![](https://assets.gnews.org/wp-content/uploads/2022/01/01282.jpg)图片来自today.it
+一场全球性的心理健康危机正在发生，尤其是在非常年轻的人群中：与 Covid-19 大流行之前相比，青少年抑郁和焦虑的发病率翻了一番，一项研究结果表明，如今四分之一的青少年有抑郁症的临床症状和五分之一的有焦虑症迹象。
 
-在西方民主国家政府逐步顺应民意为疫情松绑的趋势下，港府依旧一意孤行强推新冠疫苗注射，甚至变本加厉，公然要将全港7.6万位老弱病残的院舍人士尽快置于死地。这些弱势群体一直都可以依法规避注射新冠疫苗，Omicorn变种病毒是港府提升疫苗接种率的最后机会，港府按奈不住直接向院舍人士露出獠牙。
+如果不能迅速和良好地解决青春期抑郁症，则会导致终生困难。其中焦虑、药物滥用甚至犯罪行为的风险更大，出现健康问题和复杂的社会关系以及无法实现学习和职业目标的可能性更高。
 
-是个人都知道，需要入住院舍的人士肯定不是身体健康的，而且很多是患有严重疾病的，港府耍出这阴毒的五招，招招都把医生推向风口浪尖，势必掀起对立的医患关系，在香港制造出严重的社会矛盾，这很符合中共一贯的作风。院舍人士如同砧板上的肉任由港府宰割，家属但凡有反对的，肯定会被院舍要求让出床位，横竖都是要逼死这些人，家属的怨气将成功指向医生和院舍，舆论将毫无留情地抨击涉事的医生和院舍，最终成为中共港府借刀杀人的替死鬼。
+为了避免其长期后果，正确的诊断加上心理治疗及在适当的情况下必须包括使用药物。特别值得一提的是，在发育年龄，许多药物仍然被排除使用。抗抑郁药可以而且必须在适当的情况下给予青少年，但必须始终进行仔细监测。
 
-资料来源：[**安老殘疾院舍接種率低　聶德權：採取5項加強措施**](https://www.wenweipo.com/a/202201/28/AP61f350f3e4b03103e0c6c629.html)
+原文链接：[https://www.today.it/benessere/psicologia/depressione-adolescenti-covid.html](https://www.today.it/benessere/psicologia/depressione-adolescenti-covid.html)
 
-*校对：东京樱花团 / 文小白*
-*发布：东京樱花团 / 平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+责任编辑/发布：意大利达芬奇农场   萧亦
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
