--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,28 +1,53 @@
 ---
-title: 恐惧“恐”到傻叉，讲科学“讲”到懵逼，卖蒜苗买眼药都要核酸
+title: 【信仰之声】神為什麼造人？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923252/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1923324/)
 
-撰稿：东京樱花团丨Ob
-![](https://lh5.googleusercontent.com/YZ5ZRYFBsNP7HJFZXJdAe9hDYy7TjNfcW5gnDD2tY5fuUKiJGyCxonfaXACjm_0oGIVYlgoKNc1ivhxH39X0YcY41I-9znOSxRIeE-gd3-1aodEivkZdTip10JpIaYkrz7cBL6ot)
-据【看中国】网1月26日综合报导，临近中共国传统新年但中共病毒本土疫情却不断升温，令民间人心惶惶。为此，中国各地政府对于防疫指令层层加码，包括无论老人小孩都要在零下30度严寒排队做核酸检测；购买眼药水要出示核酸阴性证明；高中生做了18次核酸检测均为阴性，却还是有家不能归；甚至连农民种的蒜苗也要接受筛检。一系列做法引发民间炮轰。
+作者：纽约香草山福音部 — 新天新地
 
-近日一段河南省禹州市防疫人员替蒜苗进行PCR核酸检测的视频在网络热传。视频显示，一名身穿防护服的人员在大棚内采集尚未收割的蒜苗进行核酸检测。其中一名女子说，“卫生院里的做核酸人员，为我们村里蒜苗做核酸检测。”另一名男子则表示，“商家要求蒜苗上不能带有新冠病毒，上百吨蒜苗已经滞销。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-5-768x103-3.jpg)
 
-对此，当地政府也证实，该视频是禹州市火龙镇卫生院防疫人员替蒜苗采检的画面，受到疫情影响，火龙镇有上百吨蒜苗滞销，收购商要求蒜苗合格健康，政府才派人采集进行核酸检测。蒜苗业者则无奈表示，“即便自己认为这是蠢事儿也得做。毕竟是卖东西的一方，只能去满足买方的要求。”
 
-相关视频传丑，引发民间热议。不少网友吐槽说“荒唐至极”，“都是什么智商的人在管防疫啊？”、“不知道该骂还是该笑了”、“自称世界抗疫典范，根本沦为全球笑柄”、“每颗大蒜都必须要有健康码才能放行”。
 
-文章还指出，为蒜苗做核酸多少有点“奇葩”，但这种“奇葩”事件在许多地方层出不穷，让人们无所适从。比如说，有的地方在药物购买方面采取了更严格的管控措施，去药店买瓶眼药水也被“弹窗”要求去做核酸检测，大概是因为眼药水具有消炎作用；还有的地方在没有出现病例的情况下却要求进行全员核酸，零下30度让老人和孩子排队做核酸，是不是还有更科学精准的防控办法？
 
-一名网友也发帖称，他在京东购物平台看了一眼消炎药“头孢”，不小心放入“购物车”，结果还未付款购买，手机应用上的防疫绿码就转变为红码，让他感到惊讶不已。此外，微博还流传一段视频显示，近日河南省禹州一名高中女生做了18次核酸检测均为阴性，却还是有家不能归，学校不让回，最终被迫和母亲在大雪中走了一夜。
 
-**是什么力量让防疫失去了理智，又是什么力量让人们打着科学防疫的口号公然违反“科学”，无知最可怕，失智的盲目最可笑也最可悲，一句话，毫无自信的心里没有了底，乱了方寸。更可悲的是明知荒唐却仍然荒唐地进行着。一个习惯集体作恶的社会，做正确的事似乎成了异类，改错似乎成了一种不可能的奢望，于是乎在错误的道路上一路狂奔。**
 
-*校对：东京樱花团 / 東洋武士
-发布：东京樱花团 / 平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
 
+
+
+神从创造宇宙到创造人类，然后把祂的眼光聚焦在人类身上，创1:26“我们要照着我们的形象，按着我们的样式造人，使他们管理海里的鱼、空中的鸟、地上的牲畜和全地，并地上所爬的一切昆虫。”我们往往会记得神创造人是要“生养众多，遍满地面。”却忽略了另外两个重要的造人目的：1.按照神的形象 2.管理全地 。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/IMG_0868.jpg)
+
+如果单单造人，让人在地球上繁殖生养众多，在造人的初始，不出几百年，便可遍满地面。但人被造的目的到底是什么呢？如果神所造的人，是像牲畜、鸟类、鱼类，那么虽然有自由，有生机，但没有一个完整的、完美的形象；正因如此，人的被造与动物的区别在于：人是按照神的形象造的。那么这么说来，人是不是拥有神完全的形象呢？当然不是。人永远是受造物，神永远是创造主；人只有人性，并没有神性。那如何有“神的形象”？因为神是圣洁、公义、慈爱的神，又是大能、智慧、有旨意的神；因此，这般“神的形象”在人身上是可以不同程度的拥有，并且以神为标准和模板，不断更新地像祂的形象，但却永远达不到神的完美。当人类活在地上，失去公义、圣洁、慈爱，他离神的形象就渐行渐远；失去能力、智慧、意志，人类仅仅维系自己都困难。所以，神的形象应当在所造的人身上不断彰显出来，在人的身上荣耀神。我们看见现在的世界，各族各民若不是有真正的信仰，他们的生命品质的标准总是很低的，至少够不到神的形象和样式。在末后的世代，世界邪恶势力、ccp红魔、沼泽地阴谋者慢慢浮出水面，他们用各种的思想、文化、媒体、权力试图改变人心，影响以及控制人心，在很大程度上把很多人带离“神的形象”，因为这些恶者就是始作俑者，又是魔鬼的帮凶，目的在于摧毁无辜人类、控制人类、愚化人类，最终混乱世界，使“人者不人”。
+
+另外，从神造人的第二个目的看，神要人管理好全地。但人类因着工业发展，与大自然越来越不和谐，实际上是可以找到平衡之道，但因着利益集团和自身的利益，人类并不是好的地球管理者。在国家管理上，我们看见因着各种罪恶和利益，带来人类之间的战争，“民攻打民，国攻打国”，进入互相伤害互相奴役互相统治的争夺之中。在个人的生活、家庭的生活中，人类似乎也迷失了方向，不懂得管理自己的夫妻关系、儿女父母关系、同事朋友亲戚关系，也包括不懂管理身体健康、心理健康、精神健康，还有无法平衡财富管理、时间管理、情绪管理、物质管理。可以说，在人的管理层面，离开神原初的旨意“管理全地”更加遥远。
+
+当我们重新复习圣经的开卷明义，神造人更加重要的目的是在于人的精神和生命的属灵层面。当一个人蒙圣灵重生，他便“穿上新人，这新人是照着神的形象造的，有真理的仁义和圣洁。”-以弗所书4:24.只有借着圣灵把我们带进基督里面，我们才能恢复到神创造人的旨意中，可以朝着神的形象之模板去塑造，就是“效法他儿子的模样”-罗马书8:29，活出基督的丰富，活出圣洁、公义、慈爱，并带着基督属天的智慧、能力、遵从神的旨意而行，不仅在我们身上彰显神的荣耀，也让我们对周边的人事物有正确的管理。以此，使我们更加荣耀神。
+
+2022年1月28日
+
+（本文仅代表作者个人观点）
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/M1.jpeg)
+
+*编辑 /校对*：德州牛仔
+
+*发稿：Yuki*jiang
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
