--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,29 +1,23 @@
 ---
-title: 国防部暂停对文职雇员强制接种中共病毒疫苗
+title: 俄罗斯正往乌克兰前线派遣医疗队
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1922635/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1922799/)
 
-#### 撰稿：彩虹
+#### 撰稿：彩虹   
 
 #### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-45.jpg)图片来源：国会山报
-1月27日，《国会山报》报道，在德克萨斯州的一名联邦法官作出裁决，阻止拜登总统对联邦工作人员的强制接种中共病毒疫苗后，国防部正在暂停对文职雇员进行强制接种中共病毒（COVID-19）疫苗。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-46.jpg)图片来源：澳大利亚人报
+1月27日，《新闻极限》引述《华尔街日报》的报道，周四，西方国防官员报告说，莫斯科正在往乌克兰前线派遣医疗队。
 
-周四，五角大楼新闻秘书约翰·柯比（John Kirby）告诉记者，“国防部已发布指导意见，暂停所有与处理文职人员（中共病毒）疫苗接种豁免申请有关的活动，以及暂停对未能接种（中共病毒）疫苗的联邦文职人员采取任何纪律处分。该指南确保遵守美国德克萨斯州南部地区法院于1月21日星期五发布的全国范围内的初步禁止令。”
+报道说，大约有10万名俄罗斯军人驻扎在乌克兰前线。之前，俄罗斯在格鲁吉亚和乌克兰边境附近集结了大量部队，但在大规模集结后又缩减了部队，这使得西方情报组织无法确定弗拉基米尔·普京（Vladimir Putin）总统的计划。
 
-2021年10月份，国防部长劳埃德·奥斯汀（Lloyd Austin）下令所有70万名文职部门员工在11月22日前接种中共病毒疫苗，以遵守拜登在一个月前宣布的关于联邦工作人员的行政命令。
+本周早些时候，副国务卿温迪·谢尔曼（Wendy Sherman）说：“我不知道他是否已经做出最终决定，但我们确实看到各种迹象表明他将在某个时候，也许是现在和2月中旬使用军事力量。”
 
-五角大楼网站提供的最新数据显示，目前有341,836名文职人员完全接种了中共病毒疫苗，50,710人部分接种了中共病毒疫苗。
-
-上周五，杰弗里·布朗（Jeffrey Brown）法官发布禁令，禁止联邦政府对联邦工作人员执行这一强制接种任务。他说，此案是关于“总统是否可以在没有国会意见的情况下，用笔一挥，要求数百万联邦雇员接受一项医疗程序，作为他们就业的条件”。
-
-然而，五角大楼新闻秘书柯比强调，布朗的裁决并不适用于军人，也不影响五角大楼的任何其他健康保护措施。
-
-文章报道，总的来说，160万军人已经完全接种了中共病毒疫苗，339,369人已经部分接种。
+而《华尔街日报》引用一匿名的德国高级官员的话说：“美国认为普京将进行一场全面的战争，而欧洲人认为他是在虚张声势，美国人正在为发生的军事行动做准备，而我们则没有。”
 
 **新闻来源**
 
-[Pentagon pauses civilian vaccine mandate after federal court ruling](https://thehill.com/policy/defense/591703-pentagon-pauses-civilian-vaccine-mandate-amid-federal-court-ruling?rl=1)
+[Moscow Moves Medical Units to Ukrainian Front](https://www.newsmax.com/newsfront/russia-ukraine-medical-units-military/2022/01/27/id/1054375/)
 
  
 
