--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,7 +1,7 @@
 ---
-title: 秦城监狱退休的警察的爆料
+title: 喜币的厉害超出想象
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923261/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923326/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
