--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,22 +1,24 @@
 ---
-title: 出席北京2022年冬奥会开幕式及相关活动的国际政要
+title: 加拿大警察克里斯跟着抗议强制疫苗的大卡车车队前往渥太华
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/1923236/)
+`DC政经` [轉載自GNews](https://gnews.org/zh-hans/1923288/)
 
-作者：德国纽伦堡正义农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/01/冬奥会国际政要.jpeg)封面来源：网络图片
-新华社微博2022年1月28日报道，中共外交部发言人华春莹宣布，习近平将于2月4日至6日出席北京2022年冬奥会开幕式，为来华出席开幕式的外国元首、政府首脑、王室成员及国际组织负责人举行欢迎宴会，并举行相关双边活动。中共为了此次北京冬奥会能够圆满成功举办可谓不计成本、不计得失、不择手段，几百亿、几千亿美金的支付就是为了其他国家首脑能出席冬奥会帮中共站台。中共国老百姓真的是太可怜了，地球上已经找不到任何语言来形容，中共国老百姓不仅是“被愚”、“自愚”的程度，而是主动的去“愚他”，如果你不让我愚或者你不和我一样被愚那就是我的敌人。
+【抗议强制疫苗系列】
 
-出席北京2022年冬奥会开幕式及相关活动的国际政要有：**俄罗斯总统普京、柬埔寨国王西哈莫尼、新加坡总统哈莉玛、哈萨克斯坦总统托卡耶夫、吉尔吉斯斯坦总统扎帕罗夫、塔吉克斯坦总统拉赫蒙、土库曼斯坦总统别尔德穆哈梅多夫、乌兹别克斯坦总统米尔济约耶夫、埃及总统塞西、沙特王储穆罕默德、卡塔尔埃米尔塔米姆、阿联酋阿布扎比王储穆罕默德、波兰总统杜达、塞尔维亚总统武契奇、卢森堡大公亨利、摩纳哥亲王阿尔贝二世、阿根廷总统费尔南德斯、厄瓜多尔总统拉索、蒙古国总理奥云额尔登、巴基斯坦总理伊姆兰·汗、波黑部长会议主席特盖尔蒂亚、巴布亚新几内亚总理马拉佩、韩国国会议长朴炳锡、阿塞拜疆副总理阿赫梅多夫、泰国公主诗琳通及国际奥委会主席巴赫、联合国秘书长古特雷斯、联大主席沙希德、世界卫生组织总干事谭德塞、世界知识产权组织总干事邓鸿森、新开发银行行长特罗约、上海合作组织秘书长张明**等。
+加拿大警察克里斯跟着抗议强制疫苗的大卡车车队前往渥太华 加拿大警察克里斯没忍住眼泪， 他跟着抗议强制疫苗的大卡车车队前往渥太华，看见一路上每个立交桥都挤满了支持他们的加拿大人，并不是总理土豆说的「一小撮」。
 
-看看这些参加北京2022冬奥会的国家和政要都是些什么货色？七哥在大直播中说：我们新中国联邦接下来会在未来3到5年、10年内灭掉共产党以后，我们要把所有参加2022北京冬奥会的列入名单，我们会永远给你挂在墙上，挂在我们的媒体平台上。你为啥去参加冬奥会？你去了都干啥了？你参加冬奥会就是跟中国人民作对。你参加冬奥会都是想吃狗肉，你参加冬奥会就是跟中国人民反对的政府暴政为伍。我可以列出100条罪行来让你没有任何理由去参加这个邪恶的冬奥会，这个比当年的希特勒、斯大林还夸张。
+加拿大人没有分裂，尽管土豆意图制造分裂。
 
-新闻来源：🔗[权威快报｜习近平将出席北京2022年冬奥会开幕式并举行系列外事活动](http://www.news.cn/politics/leaders/2022-01/28/c_1128309955.htm)
+土豆这两天称病，想避开抗议的大卡车车队。
 
-*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
+民主国家里这么声势浩大的抗议，您能躲哪儿去？
 
-想了解更多资讯，请扫描农场二维码：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/85c861bf6b6325b4.jpg)
+* * *
+
+听写，翻译：蔻依 | 字幕，发布：文零
+
+更多新闻咨讯请访问：[DC政经Gettr账号](https://gettr.com/user/dczhengjingquan)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/DCZJ_Gnews_960_160.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
