--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,41 +1,35 @@
 ---
-title: 英国为俄罗斯的网络攻击做好准备
+title: 面对中共制裁 立陶宛表示无更名计划
 ---
-`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/1923173/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923191/)
 
-信息来源： 路透社
+撰稿：台湾宝岛农场-dobi
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
+针对因台湾在立陶宛设立代表处的中文名称，中共持续对立陶宛进行制裁一事，立陶宛外长蓝斯柏吉斯于26日表示，没有变更台湾代表处名称的计划。台湾驻立陶宛代表也表示，未曾接获变更驻立陶宛台湾代表处的中文或英文名称的要求。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2339.png)
+当天，台湾驻荷兰代表接受荷媒专访，强烈批评中共国制裁立陶宛企业，胁迫欧盟企业撤出立陶宛等行动，并强调在两岸关系方面，中共的胁迫不会动摇台湾捍卫主权、民主和自由的决心。
 
-翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/KGUCQVWIQRJYJFVTBBP4EHBWYQ.jpg)
 
 
-图片来源： 路透社
+新闻连接：
 
-英国周五警告大企业加强防御，以防范俄罗斯可能的网络攻击，因为西方对总统弗拉基米尔·普京(Vladimir Putin)总统的入侵乌克兰的担忧加剧。
+[立陶宛外長：沒有改變台灣代表處名稱計畫](https://tw.news.yahoo.com/%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7-%E6%B2%92%E6%9C%89%E6%94%B9%E8%AE%8A%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E5%90%8D%E7%A8%B1%E8%A8%88%E7%95%AB-114935969.html%E3%80%8B)
 
-在俄罗斯在其前苏联邻国边境附近部署了大约 10 万军队后，美国、欧盟和英国一再警告普京不要攻击乌克兰。
+[駐荷代表接受荷媒專訪 強烈批評中國脅迫立陶宛](https://tw.news.yahoo.com/%E9%A7%90%E8%8D%B7%E4%BB%A3%E8%A1%A8%E6%8E%A5%E5%8F%97%E8%8D%B7%E5%AA%92%E5%B0%88%E8%A8%AA-%E5%BC%B7%E7%83%88%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%84%85%E8%BF%AB%E7%AB%8B%E9%99%B6%E5%AE%9B-105143595.html)
 
-俄罗斯官员表示，在 1991 年苏联解体后北约军事同盟向东扩展并在伊拉克和叙利亚播下混乱之后，西方被俄罗斯恐惧症所困扰，正在讨论如何采取行动教训莫斯科。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
 
-英国国家网络安全中心 (NCSC) 是 GCHQ 窃听情报机构的一部分，它警告大型组织在乌克兰局势日益紧张的情况下加强其网络安全弹性。
+编辑：飞虹/雪梨
 
-西方领导人表示，21 世纪将由民主国家与中共国 和俄罗斯等竞争对手之间的斗争来定义，他们认为中共国 和俄罗斯正在军事、技术和经济上挑战冷战后的共识。
+校正/发稿：浪迹天涯
 
-“几年来，我们观察到俄罗斯在网络空间中的恶意行为模式，”NCSC 运营总监 Paul Chichester 说。
-
-本月早些时候有网络攻击警告乌克兰人要“害怕并期待最坏的情况”。乌克兰称莫斯科是这次袭击的幕后黑手。
-
-“乌克兰的事件具有我们之前观察到的类似俄罗斯活动的特征，” Chichester说。
-
-根据哈佛大学肯尼迪学院贝尔弗中心 2020 年的排名，世界上最大的网络攻击力量是美国、英国、俄罗斯和中共国 。
-
-英国的间谍首脑说，俄罗斯仍然是西方最大的直接威胁，但共产党中共国在技术方面的长期主导地位构成了更大的问题。
-
-英国国家网络安全中心表示：“正在敦促英国组织加强其网络安全弹性，以应对乌克兰及其周边地区的恶意网络事件。”
-
-🔗[英国为俄罗斯的网络攻击做好准备](https://www.reuters.com/world/europe/brace-russian-cyber-attacks-over-ukraine-britain-says-2022-01-28/)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
