--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,28 +1,32 @@
 ---
-title: 台湾着手调度蓬佩奥先生访台事宜
+title: 日议员提议派高官赴台湾 首相未否定
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923167/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923181/)
 
-新闻采集/撰稿： 日本方舟农场 Andy5
+撰稿：台湾宝岛农场-dobi
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
-据台湾媒体1月26日报道，台湾政府正在调整“哈利法克斯台北论坛“的时间，期待美国前任国务卿蓬佩奥先生出席本次论坛。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2337.png)
-据悉，本次论坛原定于3月10日在台北举行，鉴于国际疫情，具体开幕时间正在调整中。台湾外交部表示，台湾诚挚欢迎蓬佩奥先生来台访问。
+1月26日，日本首相岸田文雄在众议院进行答询时，被自民党中谷真一议员问及日台关系深化相关问题时，岸田文雄表示，与台湾相关的议题，日本虽有基本立场，但仍须努力深化日台关系，加强交流。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2338.png)
+中谷真一还提出，日本应与蔡英文政府拉近距离，派遣外交高官赴台，推动各项政策交流。日本自1972年与中共国外交正常化后，尚未与台湾建交。而对于中谷真一的这项提议，岸田文雄也未予以否定。
 
-新闻链接：[最友台美國國務卿 傳蓬佩奧3月將訪問台灣](https://tw.news.yahoo.com/%E6%9C%80%E5%8F%8B%E5%8F%B0%E7%BE%8E%E5%9C%8B%E5%9C%8B%E5%8B%99%E5%8D%BF-%E5%82%B3%E8%93%AC%E4%BD%A9%E5%A5%A73%E6%9C%88%E5%B0%87%E8%A8%AA%E5%95%8F%E5%8F%B0%E7%81%A3-154502645.html)
+[新闻连接]：
+
+[日議員提派高官赴台灣 岸田未拒絕](https://tw.news.yahoo.com/%E6%97%A5%E8%AD%B0%E5%93%A1%E6%8F%90%E6%B4%BE%E9%AB%98%E5%AE%98%E8%B5%B4%E5%8F%B0%E7%81%A3-%E5%B2%B8%E7%94%B0%E6%9C%AA%E6%8B%92%E7%B5%95-104343925.html)
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
 
-总编/编辑：飞虹
+总编：Irene木木
+
+编辑：Lakeman文仁/雪梨
 
 校正/发稿：浪迹天涯
 
 **更多资讯，更多关注**
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
  
 
