--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,25 +1,40 @@
 ---
-title: 马歇尔参议员公布了福奇与中共的财务往来
+title: 英国为俄罗斯的网络攻击做好准备
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1923124/)
+`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/1923173/)
 
-##### 翻译：Elon mask
-校对：精靈藍
-剪辑|字幕：小强
-编辑：Mttfly
+信息来源： 路透社
 
-为什么福奇博士只相信新冠疫苗？为什么他从来不考虑硫酸羟氯喹或者伊维菌素？福奇跟谁有资金往来呢？美国参议员马歇尔（Roger Marshal）近日获得了福奇的财务状况，并公布在其个人网站[marshall.senate.gov](https://www.marshall.senate.gov/newsroom/press-releases/breaking-sen-marshall-proves-fauci-lied-by-obtaining-previously-unpublished-financial-records/)上。其中显示，在2020年，福奇从中共赚取了170万美元。
+翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
 
-视频链接：[马歇尔参议员现在已经获得并在他的网站上发布了福奇的财务状况，福奇在 2020 年就赚了 170 万美元，“在中共国还有大量投资”。](https://twitter.com/johndoe1284495/status/1483694291834658818?s=21)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/KGUCQVWIQRJYJFVTBBP4EHBWYQ.jpg)
 
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
+图片来源： 路透社
+
+英国周五警告大企业加强防御，以防范俄罗斯可能的网络攻击，因为西方对总统弗拉基米尔·普京(Vladimir Putin)总统的入侵乌克兰的担忧加剧。
+
+在俄罗斯在其前苏联邻国边境附近部署了大约 10 万军队后，美国、欧盟和英国一再警告普京不要攻击乌克兰。
+
+俄罗斯官员表示，在 1991 年苏联解体后北约军事同盟向东扩展并在伊拉克和叙利亚播下混乱之后，西方被俄罗斯恐惧症所困扰，正在讨论如何采取行动教训莫斯科。
+
+英国国家网络安全中心 (NCSC) 是 GCHQ 窃听情报机构的一部分，它警告大型组织在乌克兰局势日益紧张的情况下加强其网络安全弹性。
+
+西方领导人表示，21 世纪将由民主国家与中共国 和俄罗斯等竞争对手之间的斗争来定义，他们认为中共国 和俄罗斯正在军事、技术和经济上挑战冷战后的共识。
+
+“几年来，我们观察到俄罗斯在网络空间中的恶意行为模式，”NCSC 运营总监 Paul Chichester 说。
+
+本月早些时候有网络攻击警告乌克兰人要“害怕并期待最坏的情况”。乌克兰称莫斯科是这次袭击的幕后黑手。
+
+“乌克兰的事件具有我们之前观察到的类似俄罗斯活动的特征，” Chichester说。
+
+根据哈佛大学肯尼迪学院贝尔弗中心 2020 年的排名，世界上最大的网络攻击力量是美国、英国、俄罗斯和中共国 。
+
+英国的间谍首脑说，俄罗斯仍然是西方最大的直接威胁，但共产党中共国在技术方面的长期主导地位构成了更大的问题。
+
+英国国家网络安全中心表示：“正在敦促英国组织加强其网络安全弹性，以应对乌克兰及其周边地区的恶意网络事件。”
+
+🔗[英国为俄罗斯的网络攻击做好准备](https://www.reuters.com/world/europe/brace-russian-cyber-attacks-over-ukraine-britain-says-2022-01-28/)
 
  
 
