--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,36 +1,28 @@
 ---
-title: 为缓解中共财政危机，城投公司大量购买土地
+title: 台湾着手调度蓬佩奥先生访台事宜
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923121/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923167/)
 
-撰稿：纽约香草山教育部 – Naughty(文行)
+新闻采集/撰稿： 日本方舟农场 Andy5
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
-在中国房地产业流动性危机席卷民营房企之际，中共国地方城投公司成为购买土地的主力军，试图努力化解“土地财政”模式下地方政府的困境。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2336.png)
-据悉，去年最后两个月，在集中供地的21个大城市中，九座城市至少一半的地块被当地城投公司购买。在经济放缓的情况下，此举虽有助于遏制当前土地销售下滑的趋势，缓解各地政府的财政压力，但这无疑也将推升城投公司的杠杆率，进一步增加本就沉重的债务负担。
+据台湾媒体1月26日报道，台湾政府正在调整“哈利法克斯台北论坛“的时间，期待美国前任国务卿蓬佩奥先生出席本次论坛。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2337.png)
+据悉，本次论坛原定于3月10日在台北举行，鉴于国际疫情，具体开幕时间正在调整中。台湾外交部表示，台湾诚挚欢迎蓬佩奥先生来台访问。
 
-城投公司即城市建设投资公司，是全国各大城市政府投资融资平台，属于事业单位或者国有独资公司性质。此类城投公司本身不具备盈利能力，通过政府补贴、银行贷款等方式实现运转。此前已有多家大中型银行对地方城投公司收紧购地和开发地产项目的贷款，提高了风控要求，现在却被迫执行政府指令性投融资业务。据悉，今年中共城投公司在境内外市场将面临约3760亿美元的债券到期。爆雷，只是时间问题。
-
-链接：
-
-[China Banks Curb Property Loans to Local Government Firms](https://www.bloomberg.com/news/articles/2022-01-13/china-banks-restrict-property-loans-to-local-government-firms)
-
-[中国地方政府融资平台大量购买土地](https://www.zaobao.com/realtime/china/story20220126-1236789)
+新闻链接：[最友台美國國務卿 傳蓬佩奧3月將訪問台灣](https://tw.news.yahoo.com/%E6%9C%80%E5%8F%8B%E5%8F%B0%E7%BE%8E%E5%9C%8B%E5%9C%8B%E5%8B%99%E5%8D%BF-%E5%82%B3%E8%93%AC%E4%BD%A9%E5%A5%A73%E6%9C%88%E5%B0%87%E8%A8%AA%E5%95%8F%E5%8F%B0%E7%81%A3-154502645.html)
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
 
-总编：飞虹
-
-编辑：纽约香草山文艺部 – 宁文静
+总编/编辑：飞虹
 
 校正/发稿：浪迹天涯
 
 **更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
  
 
