--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,69 +1,37 @@
 ---
-title: 《避风港Haven》直播内容精选（第二集）
+title: 为缓解中共财政危机，城投公司大量购买土地
 ---
-`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/1923088/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923121/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/989a6f2b-5002-4ad0-bb99-ba3f7a776ce3.jpg)
-《避风港 HAVEN》是一档定时有效，集医学科普，病案分析，治疗咨询和心理疏导的直播节目。节目的播出时间:美东时间每周二，四，六下午3点。请需要问诊的观众朋友，不要错过直播时间。Eglise医生会在节目中尽可能多的对现场询问的观众进行健康指导，希望能救助更多的人。
+撰稿：纽约香草山教育部 – Naughty(文行)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
+在中国房地产业流动性危机席卷民营房企之际，中共国地方城投公司成为购买土地的主力军，试图努力化解“土地财政”模式下地方政府的困境。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2336.png)
+据悉，去年最后两个月，在集中供地的21个大城市中，九座城市至少一半的地块被当地城投公司购买。在经济放缓的情况下，此举虽有助于遏制当前土地销售下滑的趋势，缓解各地政府的财政压力，但这无疑也将推升城投公司的杠杆率，进一步增加本就沉重的债务负担。
 
-第二集**医生问答环节：**
+城投公司即城市建设投资公司，是全国各大城市政府投资融资平台，属于事业单位或者国有独资公司性质。此类城投公司本身不具备盈利能力，通过政府补贴、银行贷款等方式实现运转。此前已有多家大中型银行对地方城投公司收紧购地和开发地产项目的贷款，提高了风控要求，现在却被迫执行政府指令性投融资业务。据悉，今年中共城投公司在境内外市场将面临约3760亿美元的债券到期。爆雷，只是时间问题。
 
-威廉王问： 如果单纯吃青蒿素+锌+D3，补铁、补VC，能否起到预防作用，还是必须加入伊维菌素来预防？如果必须加入了伊维菌素，那么，预防中共病毒和排疫苗毒吃的都差不多了啊，很费解！
+链接：
 
-**Eglise医生回答：单纯青蒿素也许行, 但青蒿素保健品的有效药物浓度极低, 不足以单独用来抵抗病毒的侵入和复制。预防和排毒并不矛盾**。**联合用药在预防和排毒中都很重要。**
+[China Banks Curb Property Loans to Local Government Firms](https://www.bloomberg.com/news/articles/2022-01-13/china-banks-restrict-property-loans-to-local-government-firms)
 
-问：孕妇能不能每周服用一次硫酸羟氯喹，每天服用锌来预防新冠？
+[中国地方政府融资平台大量购买土地](https://www.zaobao.com/realtime/china/story20220126-1236789)
 
-**Eglise医生回答: 可以。关于硫酸羟氯喹：FDA在孕妇中做过临床可以安全服用的，所以，孕妇可以每周服用硫酸羟氯喹加锌来预防新冠。**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
 
-问**:** 目前戴两层口罩会比戴一层口罩保护性更好一些吗？
+总编：飞虹
 
-**Eglise医生解答：飞沫，也许; 病毒，不能。**带两层口罩不比带一层口罩有效。市面上口罩除了N95外，所有口罩都不能有效保证不被病毒感染，因为是空气传播的气溶胶，分子颗粒很小，可穿透除N95以外的口罩，带一层两层均只可防飞沫。注意N95也只有4小时的有效性，不可重复使用。故口罩是给地球增加垃圾不好处置的摆设用品。
+编辑：纽约香草山文艺部 – 宁文静
 
-**手套的戴法也值得大家注意。带手套接触到外物后，均视为不洁，应用酒精喷射消毒，丢弃时应内翻向外，不可带手套淘钱包，开车等。**
+校正/发稿：浪迹天涯
 
-**其它重要知识点：**
-
-- **黑孜然子油可以给小孩吃，但给胶囊剂型的，10-20毫克每公斤剂量，不可用成人剂量。4岁以上可用。**
-
-
-- **如果只用黑孜然籽油，NAC，维生素C，D3 和锌作为预防，黑孜然子油和NAC的用量要加倍。并注重质量，比如用有机，冷榨，含百里醌至少1.3%以上的黑孜然籽油**
-
-
-- **关于阿斯匹林，因人而异。如未接种的感染者，年轻的不用服用，中年以上都建议用，以防止微血栓的形成。急性感染期后油并发症的可继续服用2周-3个月。视具体情况而定。**
-
-
-- **感染经伊维菌素治疗康复后还咳嗽，幼儿可以在家里用NAC气雾治疗。或者由医生开具的低浓度类固醇激素-布地奈德（Budesonide），就是治疗哮喘用的，一天2次，2-3周。成人用Budesonide，或NAC自制鼻喷液，用台式或手持的做气雾治疗，一天可以多次，预防用一天2次即可。**
-
-
-**另外，Eglise 医生认为营养均衡，坚持健身，保持肌体健康可有效抗击病毒。**如果食物中不能摄入足量维生素，必须从保健品中获取。比如B族维生素等是维系健康的基本营养素。Eglise医生给予维生素B族和食补的关系图如下：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/photo_2022-01-28_21-17-38.jpg)美工设计：女农![](https://assets.gnews.org/wp-content/uploads/2022/01/photo_2022-01-28_21-17-48.jpg)美工设计：女农
-**最后，青蒿素和伊维菌素的特殊药理机理，可以有效解除刺突蛋白。但必须牢记在心的是，由于无法测定体内刺突蛋白的含量，所以解毒排毒的过程必须是长期的，持续的，按一定疗程的进行，不能因为没有体征表现而忽略。**
-视频剪辑：Gloria/外星人
-一具良方
-
-一座安全的避风港
-
-一同治愈
-
-一道启航
-
-Eglise医生，美东时间每周二四六的下午3点直播见。
-
-直播频道：喜马拉雅纽约磐石农场一台
-
-[直播链接：](https://gtv.org/video/id=61f056c428a108147c62a8c4)
-
-文案：Eglise，万物有灵
-
-速记整理：Gloria
-
-美工：女农
-
-编辑/发布：Jenny
-![](https://assets.gnews.org/wp-content/uploads/2022/01/磐石discord.jpg)磐石农场Discord二维码![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)
-
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
