--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,33 +1,69 @@
 ---
-title: 王毅威胁美国勿在冬奥会和台湾问题上玩火
+title: 《避风港Haven》直播内容精选（第二集）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1922916/)
+`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/1923088/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://lh4.googleusercontent.com/tGOcusBP9c5ZZzuAoPIC3oQdx5u-NXJD_UDcY1TZ-ByIdDfpMnokkwJ0zePLGEAHOzEeDuRQMuWeuNxqfEARw5Zevij370dch_QaXVnPDUpMm7xMKGSdv8-H4w2tp9GJaOvCBbda)[*图片来源*](https://www.newsweek.com/china-gives-america-biden-three-urgent-demands-1673446)
-**美国政府授权撤离驻北京大使馆后，中共并未降低“战狼”的调门，继续威胁美国不要干预北京冬奥会、不要在台湾问题上玩火、停止颠覆中共政权。但美国撤离驻华大使馆后，它正在国际社会形成对中共国经济、金融、文化和政治等一系列制裁和“脱钩”，国际社会外交施压的多米诺骨牌效应已经形成，中国共产党政权开始从以往的辉煌走向死亡。**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/989a6f2b-5002-4ad0-bb99-ba3f7a776ce3.jpg)
+《避风港 HAVEN》是一档定时有效，集医学科普，病案分析，治疗咨询和心理疏导的直播节目。节目的播出时间:美东时间每周二，四，六下午3点。请需要问诊的观众朋友，不要错过直播时间。Eglise医生会在节目中尽可能多的对现场询问的观众进行健康指导，希望能救助更多的人。
 
-据中共国新华社28日消息，王毅27日就[美国撤离驻北京大使馆](https://www.washingtontimes.com/news/2022/jan/26/us-mulls-evacuating-beijing-embassy-over-covid-rul/)紧急斡旋，同美国国务卿布林肯通电话时强调，“当前中美双方最重要的工作就是把习近平主席同拜登总统去年11月视频会晤达成的‘相互尊重、和平共处、合作共赢三原则’的重要共识落到实处。”具体内容包括不寻求改变中国体制、不寻求通过强化同盟关系反对中国、不支持“台独”。
+第二集**医生问答环节：**
 
-- ***延展阅读：***[***中国在冬奥会开始前两周恢复对新冠病毒的肛门拭子检测***](https://www.dailymail.co.uk/news/article-10426431/China-brings-anal-swab-testing-Covid-two-weeks-Winter-Olympics-begin.html)
+威廉王问： 如果单纯吃青蒿素+锌+D3，补铁、补VC，能否起到预防作用，还是必须加入伊维菌素来预防？如果必须加入了伊维菌素，那么，预防中共病毒和排疫苗毒吃的都差不多了啊，很费解！
+
+**Eglise医生回答：单纯青蒿素也许行, 但青蒿素保健品的有效药物浓度极低, 不足以单独用来抵抗病毒的侵入和复制。预防和排毒并不矛盾**。**联合用药在预防和排毒中都很重要。**
+
+问：孕妇能不能每周服用一次硫酸羟氯喹，每天服用锌来预防新冠？
+
+**Eglise医生回答: 可以。关于硫酸羟氯喹：FDA在孕妇中做过临床可以安全服用的，所以，孕妇可以每周服用硫酸羟氯喹加锌来预防新冠。**
+
+问**:** 目前戴两层口罩会比戴一层口罩保护性更好一些吗？
+
+**Eglise医生解答：飞沫，也许; 病毒，不能。**带两层口罩不比带一层口罩有效。市面上口罩除了N95外，所有口罩都不能有效保证不被病毒感染，因为是空气传播的气溶胶，分子颗粒很小，可穿透除N95以外的口罩，带一层两层均只可防飞沫。注意N95也只有4小时的有效性，不可重复使用。故口罩是给地球增加垃圾不好处置的摆设用品。
+
+**手套的戴法也值得大家注意。带手套接触到外物后，均视为不洁，应用酒精喷射消毒，丢弃时应内翻向外，不可带手套淘钱包，开车等。**
+
+**其它重要知识点：**
+
+- **黑孜然子油可以给小孩吃，但给胶囊剂型的，10-20毫克每公斤剂量，不可用成人剂量。4岁以上可用。**
 
 
-王毅认为，“美方对华政策的基调并没有发生实质性变化。”疫情后的世界会面临新形势新挑战。施压只会让中国人民更加团结，对抗阻止不了中国走向强大。当务之急，美方应当停止干扰北京冬奥会，[停止在台湾问题上玩火、停止打造各种反华遏华‘小圈子’](http://www.news.cn/mrdx/2022-01/28/c_1310444854.htm)。”
-
-王毅一番措辞透露中共对“[新中国联邦](https://twitter.com/henglixiaoge7/status/1486002278813388802?s=20&amp;t=0bH7vwXyDRN6lR-p2VBW0A)”的恐惧，并指出中美应在“后疫情时代”合作，而不是对抗。但王毅一系列对美国的强硬表态是否使自己立场倒置了呢？自美国授权撤离驻华大使馆后，从中共外交努力一如既往地战狼战术，语气丝毫没有缓和，这不是解决问题的办法，而只能促使美欧国家与其断交决心更加坚定。
-
-- ***延展阅读：***[***布鲁塞尔-欧盟就立陶宛争端向中国发起世贸组织行动***](https://www.dtnpf.com/agriculture/web/ag/news/world-policy/article/2022/01/27/eu-launches-wto-action-china-dispute)
+- **如果只用黑孜然籽油，NAC，维生素C，D3 和锌作为预防，黑孜然子油和NAC的用量要加倍。并注重质量，比如用有机，冷榨，含百里醌至少1.3%以上的黑孜然籽油**
 
 
-此外，王毅紧急与美国国务卿布林肯的通话斡旋的目的还在于[要求美国停止对北京冬奥会的“干预”](https://www.npr.org/2022/01/27/1076047424/china-is-demanding-us-end-its-interference-in-beijing-olympics)，这显然是害怕“美国撤离驻华大使馆”带来更多针对冬奥会的“外交抵制”的多米诺骨牌效应。美国国家公共电视台还透露，王毅是在北京时间周四与美国国务卿布林肯通电话时抱怨，“乔·拜登总统并没有改变（川普时期）对中国的强硬政治和经济政策。”
+- **关于阿斯匹林，因人而异。如未接种的感染者，年轻的不用服用，中年以上都建议用，以防止微血栓的形成。急性感染期后油并发症的可继续服用2周-3个月。视具体情况而定。**
 
-但路透社27日消息说，“美国周四呼吁中国利用其对俄罗斯的影响力，”布林肯说，“我们呼吁北京利用其对莫斯科的影响力来推动外交。”但政策专家怀疑北京会在僵局中支持华盛顿对俄罗斯普京施压。事实上，这是中俄联合谋划的军事行动计划——[俄中分别拿下乌克兰和台湾](https://gnews.org/zh-hans/1777037/)。
 
-2022年1月28日
+- **感染经伊维菌素治疗康复后还咳嗽，幼儿可以在家里用NAC气雾治疗。或者由医生开具的低浓度类固醇激素-布地奈德（Budesonide），就是治疗哮喘用的，一天2次，2-3周。成人用Budesonide，或NAC自制鼻喷液，用台式或手持的做气雾治疗，一天可以多次，预防用一天2次即可。**
 
-*校对：东京樱花团 / 東洋武士*
-*发布：东京樱花团 / 平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+
+**另外，Eglise 医生认为营养均衡，坚持健身，保持肌体健康可有效抗击病毒。**如果食物中不能摄入足量维生素，必须从保健品中获取。比如B族维生素等是维系健康的基本营养素。Eglise医生给予维生素B族和食补的关系图如下：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/photo_2022-01-28_21-17-38.jpg)美工设计：女农![](https://assets.gnews.org/wp-content/uploads/2022/01/photo_2022-01-28_21-17-48.jpg)美工设计：女农
+**最后，青蒿素和伊维菌素的特殊药理机理，可以有效解除刺突蛋白。但必须牢记在心的是，由于无法测定体内刺突蛋白的含量，所以解毒排毒的过程必须是长期的，持续的，按一定疗程的进行，不能因为没有体征表现而忽略。**
+视频剪辑：Gloria/外星人
+一具良方
+
+一座安全的避风港
+
+一同治愈
+
+一道启航
+
+Eglise医生，美东时间每周二四六的下午3点直播见。
+
+直播频道：喜马拉雅纽约磐石农场一台
+
+[直播链接：](https://gtv.org/video/id=61f056c428a108147c62a8c4)
+
+文案：Eglise，万物有灵
+
+速记整理：Gloria
+
+美工：女农
+
+编辑/发布：Jenny
+![](https://assets.gnews.org/wp-content/uploads/2022/01/磐石discord.jpg)磐石农场Discord二维码![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
