--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,33 +1,31 @@
 ---
-title: 佳能珠海撤出中共国， 高额补偿金引热议
+title: 中共专家预警大爆发， 墙内中共病毒已然失控
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/1923281/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/1923398/)
 
-作者：银河系农场—骄子
+编辑：纽约香草山 侠肝义胆
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEW-GTV-MOS-LOGO-2-768x103-31.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEW-GTV-MOS-LOGO-2-768x103-32.jpg)
 
 
 
-![原创又一巨头工厂在中国宣告落幕，佳能珠海宣布停产！相机死于手机？-数码产品-趣科技](https://p0.itc.cn/images01/20220119/20ed9de350514482b7b820411190bf33.jpeg)
 
-佳能珠海宣布撤出中共国后，于1月16日公布了针对员工的补偿金标准。根据公告，补偿金包括经济补偿金、特别慰劳金、就业支援金、感怀铭记奖金以及春节慰问金等。据一些人测算，如果一个员工2003年进入企业，月工资1万元，可以获得高达37万元的经济补偿。
 
-近两年，随着世界与中共国的全方位脱钩，很多在大陆经营多年的外资企业陆续撤离，佳能珠海也和他们一样，撤离时给予员工的高额补偿引起了国内民众的多种议论。有羡慕者认为外资企业各项制度都优于国内企业，有批评者则站在中共的立场，认为这些企业扰乱了市场环境。
+![](http://p2.img.cctvpic.com/photoworkspace/contentimg/2020/04/30/2020043015432062354.JPG)
 
-不过，观察者认为，大多数民众的还是能够判断最基本的是非善恶，只是看着一个个离去的外资企业，他们感到自己和世界的距离越来越远了。
+1月24日，中共上海病毒感染专家张文宏，日前向上海两会提案预警：墙内将面临更大的中共病毒传播风险，应未雨绸缪做好系统性抗疫准备。
+
+张文宏建议，应针对「疫情规模将超出现在的5倍或者10倍」做好预案，包括：实战演练、加强救治体系建设、加快抗疫科技平台建设等。 张文宏强调，近期发现多起无症状奥密克戎隐秘传播案例，这将诱发该病毒大范围传播，引起医疗机构瘫痪和次生灾难。
+
+郭先生预警，中共国疫情根本不可能做到清零，由于中共隐瞒疫情，得不到老百姓的帮助，现在中共病毒在墙内已经失控，墙内战友一定要保护好自己。
 
 参考链接：
 
-[https://www.stcn.com/xw/pl/202201/t20220124\_4103050.html](https://www.stcn.com/xw/pl/202201/t20220124_4103050.htmlhttps://user.observersnews.com/wap/content?id=679708)
+[https://www.sinchew.com.my/20220124/%E5%BC%A0%E6%96%87%E5%AE%8F%EF%BC%9A%E4%B8%AD%E5%9B%BD%E9%9C%80%E5%81%9A%E5%A5%BD%E5%87%86%E5%A4%87-%E7%96%AB%E6%83%85%E6%88%96%E6%9A%B4%E5%A2%9E10%E5%80%8D/](https://www.sinchew.com.my/20220124/%E5%BC%A0%E6%96%87%E5%AE%8F%EF%BC%9A%E4%B8%AD%E5%9B%BD%E9%9C%80%E5%81%9A%E5%A5%BD%E5%87%86%E5%A4%87-%E7%96%AB%E6%83%85%E6%88%96%E6%9A%B4%E5%A2%9E10%E5%80%8D/)
 
-[https://user.observersnews.com/wap/content?id=679708](https://www.stcn.com/xw/pl/202201/t20220124_4103050.htmlhttps://user.observersnews.com/wap/content?id=679708)
+编辑：文特 校对/发稿：有莫举名
 
-
-
-编辑：飞虹 校对/发稿：有莫举名
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-304.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Jan-12.png)
 
 **更多资讯，更多关注**
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
