--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,59 +1,29 @@
 ---
-title: 在大流行和抗议中，奥运会回到了改变的中共国
+title: 当下和无限可能
 ---
-`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/1923203/)
+`骄子` [轉載自GNews](https://gnews.org/zh-hans/1923325/)
 
-信息来源： 路透社
+文：银河系农场｜骄子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/4fe0903e2b944e5f967ff3c1df6695ac.jpeg)图源：网路
+共产党的假骗偷带来的是中国老百姓的本能缺失，人变得木讷和沉重，对什么都持有相同的态度。很多各个阶层的人，无论多高的段位，多深厚的滤镜，谈到最后都爱谈一个问题叫做，什么是人生。这个话题太宽泛了，是个人上来就能讲两句，说不了啥总是能说说自己的人生吧。千奇百怪也应该有千万种人生，一个方向里面尚且有无数个交叉的作用力，何况是人生呢。但无一例外的，中共国常见的谈论人生都以夸夸其谈者为主，且都要标榜自己的成功，低落者默默无闻，甚至找不到倾诉的人。尽管书本上到处在说，我长大了要做科学家，我长大了要做环卫工人，我长大了要做养猪场的饲养员，我们都拥有光明的未来。光明是谁家孩子这么倒霉，起个名字叫光明，但哪个人的未来是光明的？
 
-翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
+一个人从出生到长大，再到青壮年，到老年，每个时期都会有无限可能。看过的很多国外的影视剧作，里面也有对弱小者的鄙视，对强大的趋之若鹜，甚至还有自私自利贪婪，但是永远不缺乏的就是社会对强者对英雄的崇拜与尊重，并且这个英雄，没有特定的一个人，只要每个人，做了一件和英雄有关的事情，他就是英雄。那么这个英雄就成了神了吗？人们对英雄存在崇拜，但是英雄也是一个人，有人的各种毛病，很多剧中关于英雄的出发点往往是这个人在成为英雄之前都是默默无闻的那种性格，只是被那些碰巧的因素做了很多事情。这个事情无非就是美国大片里常见的拯救地球，拯救人类什么的。这种剧充满了光环加持，经常看的人不可思议，他怎么就这么顺利做到了。是的，他怎么这么顺利，只有一个原因，这个人要做的这件事是伟大的事，并且曾经给了无数个人的考题，没有人来做，只有他来做。这件事看似非常小，但就是能够有巨大的力量改变一切。拥有上天加持的力量，那这件事一定是拯救人类拯救地球的事情啊。这种桥段我们看多了不免厌倦，但是现实就是这样的。也许真得和电影里说的一样，没有这些英雄的帮助，地球也许已经毁灭很多次了。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/M6L6AKSK3NPQ3OOI2QYG7ZZGEI.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/8a045b9330414ca6908607880bbd82a4c5_q75_1280x720.jpeg)
 
+而在共产党内部谈论人生的大多都是些人生厚黑经验，你看我是如何上位的，你看我是如何骗到领导的老婆上床的，你看我是如何出卖利益成就自己的，一派龌龊之词。年底了，各个公司都在开年会，那些涂脂抹粉的同事，看着一个个美则美矣，但是谈论的话题哪儿哪儿都一样，懦弱肮脏虚伪无耻，样样都没少。没人会对共产党的统治有什么反对意见，相反全都都是对党的忠诚，对党的奉献，一个一个披着不同的皮囊，却都如此统一地拥有对共产党的誓死效忠。还分什么牌子的眼睫毛呢，还要什么色号的口红呢，你们这些道貌岸然的人看起来有区别吗？衣服穿在人身上，但是从衬衫的领子里冒出的是一只猪头。想起宫崎骏的那个电影来了，千寻的父母不顾千寻的劝阻，一直大吃大喝，没办法最后都变成了猪，剩下千寻一个人。那个电影充满了对现实世界的隐喻，在我们的人生中也是如此，经常有那些贪婪到无法控制自己的人，别人的好心劝阻对他们来说好像是上刑，为什么会不辨黑白，不分是非，共产党的洗脑是一方面，人心坏是另一方面，两种因素但凡失去一种都不会造成今天这个现状。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/25089.jpg)
+经常在互联网上看到一些诉苦，一点也不能接受别人过得比自己好，一定要比个高低，一定要。这种情况不仅仅是存在于同事朋友之中，同样存在于家人之间，尤其是那种从农村出来的男孩子，比如处了一个家境好点的女孩子，有天带着女孩子去吃一顿好饭，总是会非常小气，时时不忘提起自己的家人吃不起这样的饭，你能和我吃这样的好饭，那你是上辈子烧了高香了。哎吃饭就吃饭，哪有那么多人生道理要讲的？识相的女孩子马上就分手走了。试想一下，一顿好饭，吃得快乐那是一顿好饭，吃得不快乐，那还不如吃砒霜呢。造成这种情况的原因很多都是因为共产党分裂家庭，人性的缺失，很多人一辈子就在一个村子里，啥也不知道，天天再看点共产党的新闻联播啥的，或者拿个手机天天刷抖音洗脑视频，能指望他会有什么同理心吗？给家里的孩子教育当然也是你考到大学，毕业以后第一件事就是报答父母，不要拿报答父母当成自己小家子气的借口，浅薄到请女孩子吃饭也这么吝啬。况且，这根本不是报答，这是某种，父母的洗脑被延续，父母那一代永远觉得不能过好日子，永远不能闲下来，教育孩子也是这样，好日子永远不是物质的，好日子很多都是精神的满足。之所以举这个例子，和共产党非黑即白，不辨黑白，不辨善恶的洗脑是分不开的，父母对好日子的惧怕是可以传染的，孩子怎么能不受到影响呢。一个人就算赚再多的钱，他也是恐惧的，因为总有一天，这些财富都会失去。父母的恐惧教育是刻在基因里的，这样的孩子长大以后会非常看不惯那些富有的人，就是仇富心理的形成。如果赚到钱了毫无疑问他会过度地享受，就比如千寻的父母，过度地承受快乐，快乐就变成了灾难。当然不排除有能够摆脱的人，取决于当下在做的每一件事。
 
-图片来源： 路透社
+当下是一个时间，未来也是一个时间。时间一天天过去，人也一天天老去，但愿浑浊的都是岁月。洗去疲惫，洗去恐惧，风一来，不用踮脚，就能上去。
 
-北京冬奥会在一周后拉开帷幕，在外交抵制和 COVID-19 大流行迫使奥运会陷入严密的监管中， 各项准备工作蒙上了阴影。
+* * *
 
-北京将成为第一个举办夏季和冬季奥运会的城市，2008年的一些场馆将被重新使用，包括鸟巢体育场，开幕式将再次由著名的中共国 导演张艺谋监督。
+作者：骄子
+发布：骄子
 
-2008 年夏季奥运会在中共国 崛起进入世界舞台时令人眼花缭乱，而冬季奥运会将由一个变得更富裕、更强大、在习近平主席领导下变得更专制、与中共国 越来越格格不入的国家举办。
-
-在 COVID-19 时代，中共国 以零容忍政策孤立自己，取消了几乎所有的国际航班，这意味着奥运会运动员和其他人必须通过包机直接飞入奥运会泡沫。
-
-与 2008 年一样，奥运会再次成为关注中共国 人权记录的焦点，批评人士称，自那以后，中共国 人权记录恶化，导致华盛顿称北京对维吾尔穆斯林的待遇为种族灭绝，并引发美国和其他国家的外交抵制。
-
-中共国 否认有关滥用职权的指控，并多次抨击将奥运会政治化。
-
-牛津大学中共国 历史和政治学教授拉纳·米特 (Rana Mitter) 表示：“2008 年奥运会是中共国 渴望获得全球影响力的强大软实力源泉。过去一年，中共国在西方世界的声誉大幅下降。”。“中共国 共产党希望 2022 年冬奥会能够扭转这一局面。”
-
-然而，奥运会将在地缘政治紧张局势加剧的情况下拉开帷幕，俄罗斯总统弗拉基米尔·普京预计将在乌克兰边境部署军队。普京和联合国秘书长安东尼奥·古特雷斯都将参加开幕式。
-
-在北京的街道上，2008 年夏季狂欢节的喧嚣已被人们对为阻止 COVID-19 从最近的小型集群（包括更易传播的 Omicron 变体）传播而实施的限制所取代。
-
-无法购买门票的潜在观众也感到失望，因为没有一张票将出售给公众。相反，预计将由受严格 COVID-19 控制的稀疏、精心策划的人群参加活动。
-
-奥运会将在一个比去年夏天的东京奥运会更紧密的“闭环”内举行，并将由在许多冬季运动强国的西方国家主要参加竞赛。
-
-一些担心信息安全的代表团已警告会员携带刻录电话。运动员和人权组织也警告说，在中共国 就政治敏感话题发表言论的风险。
-
-涉及中共国 网球明星和前奥运选手彭帅的丑闻，指控一名退休的高级政治家对她进行性侵犯，然后失踪了数周，这加剧了对中共国主办该赛事的批评。
-
-虽然彭帅后来表示她的社交媒体帖子被误解了，但女子网球协会担心她的健康，暂停了在中共国的比赛。
-
-一位美国奥运选手告诉路透社，她不会就人权问题发表意见，因为她认为这样做会危及她的安全。“我认为中共国 已经表明——最近与彭帅一起——他们愿意采取非常极端的措施来压制他们认为不愉快的任何言论，”她说，鉴于此事的敏感性，她拒绝透露姓名。
-
-一位中共国 官员最近表示，运动员违反奥林匹克精神或违反中共国规则的行为可能会受到处罚，尽管国际奥委会（IOC）已明确表示，运动员可以在国际奥委会内部的新闻发布会和采访中自由表达自己的意见。但不可以在比赛或颁奖典礼上自由发表言论。
-
-2015 年，北京获得了举办 2022 年冬奥会的权利，此前有几名候选人退出，其中包括最受欢迎的奥斯陆，只剩下中共国首都和哈萨克斯坦阿拉木图。尽管没有什么冬季运动传统，雪量更少，国际奥委会还是选择了北京作为安全的选择。
-
-尽管担心大规模造雪对环境的影响，但中共国以有效的准备来回报这种信心。它已经完成了清洁北京臭名昭著的烟雾多发的天空，并种植了大量的树木。
-
-与因 COVID-19 推迟一年的东京夏季奥运会不同，毫无疑问，北京奥运会无论如何都会举行。
-
-感觉 2008 年奥运会非常隆重，它是向世界展示的一场盛大的表演，”20 岁的奥运会志愿者叶文晓宇说。“今年的冬奥会非常简单，非常低碳。当然，这不会影响它的精彩程度。”
-
-🔗[在大流行和抗议中，奥运会回到了改变的中共国](https://www.reuters.com/lifestyle/sports/amid-pandemic-protest-olympics-return-changed-china-2022-01-27/)
-
+[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg) 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
