--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,41 +1,18 @@
 ---
-title: 中共专家预警大爆发， 墙内中共病毒已然失控
+title: 今天政府有多疯狂 它收回就有多快 没有任何选择
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/1923398/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923584/)
 
-编辑：纽约香草山 侠肝义胆
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEW-GTV-MOS-LOGO-2-768x103-32.jpg)
+1月21日，郭文贵先生在GTV大直播指出：
 
+加拿大跟其他的极端国家相比有两点不同之处：第一，加政党对媒体的疯狂控制，导致其疫苗灾害可能会排名世界第一；第二，加经济下滑导致其国际地位下降。它最终只有跟随美国，才能迅速解决问题。西方民主政府不管多疯狂，最后必须回到正轨。这就是为什么中国人要懂得民主自由的重要性。
 
-
-
-
-![](http://p2.img.cctvpic.com/photoworkspace/contentimg/2020/04/30/2020043015432062354.JPG)
-
-1月24日，中共上海病毒感染专家张文宏，日前向上海两会提案预警：墙内将面临更大的中共病毒传播风险，应未雨绸缪做好系统性抗疫准备。
-
-张文宏建议，应针对「疫情规模将超出现在的5倍或者10倍」做好预案，包括：实战演练、加强救治体系建设、加快抗疫科技平台建设等。 张文宏强调，近期发现多起无症状奥密克戎隐秘传播案例，这将诱发该病毒大范围传播，引起医疗机构瘫痪和次生灾难。
-
-郭先生预警，中共国疫情根本不可能做到清零，由于中共隐瞒疫情，得不到老百姓的帮助，现在中共病毒在墙内已经失控，墙内战友一定要保护好自己。
-
-参考链接：
-
-[https://www.sinchew.com.my/20220124/%E5%BC%A0%E6%96%87%E5%AE%8F%EF%BC%9A%E4%B8%AD%E5%9B%BD%E9%9C%80%E5%81%9A%E5%A5%BD%E5%87%86%E5%A4%87-%E7%96%AB%E6%83%85%E6%88%96%E6%9A%B4%E5%A2%9E10%E5%80%8D/](https://www.sinchew.com.my/20220124/%E5%BC%A0%E6%96%87%E5%AE%8F%EF%BC%9A%E4%B8%AD%E5%9B%BD%E9%9C%80%E5%81%9A%E5%A5%BD%E5%87%86%E5%A4%87-%E7%96%AB%E6%83%85%E6%88%96%E6%9A%B4%E5%A2%9E10%E5%80%8D/)
-
-编辑：文特 校对/发稿：有莫举名
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Jan-12.png)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-
+*编辑：东京樱花团/墨然
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
