--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,14 +1,14 @@
 ---
-title: 中共与世界经济脱钩就是脱离了老百姓的经济控制
+title: 中共操控疫情疫苗来控制全世界
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923397/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923580/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-1月19日，郭文贵先生在GTV大直播指出：
+1月7日，郭文贵先生在GTV大直播指出：
 
-中共与世界经济脱钩，是中国人民的脱险、脱假、脱控。何为脱假？西方的墓碑科技，是一战二战后，在一次次失败和牺牲中发展壮大，美国通用发动机、德国劳斯莱斯发动机，有近4000种专利。反观中共，经济造假，粮食大部分靠进口，衣服化学制造，饮用水严重污染；科技造假，圆珠笔芯、马桶盖都无法制造。
+刺突蛋白就是病毒，会导致疫苗灾难。冬奥会期间，中共会自导自演解决世界问题和集中力量办大事的能力，反而会加剧疫苗灾难的发生。冬奥会后，地方和中央会产生激烈的矛盾冲突，会有更多的事件失控。中共所谓的一党独大的优越性将惨遭打脸。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/平安卿卿*
