--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,14 +1,14 @@
 ---
-title: 王岐山 孟建柱 江家给习设局让习成为共产党员最恨的人
+title: 习近平将走上一条不归路
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923390/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923558/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
 1月19日，郭文贵先生在GTV大直播指出：
 
-第一，江家、王岐山、孟建柱、杨洁篪精妙设局，让习成为所有中共党员最恨的人！让习走上不归路；第二，让习经济大撒币，拖垮经济，成为沼泽地的弃子，世界经济的威胁；第三，江王孟杨控制着外交、政法、军队核心，而为习卖命的人不多。习会打台湾，实施严厉的经济政策，客观上在成就新中国联邦。
+对于中共想要打台湾的疯狂构思，最高兴和支持的是中共党员。习几乎成为了全体党员最痛恨的对象，只要打台湾，习近平即会走上一条不归路。战争对台湾来说是一场灾难，但台湾会迎来新生。并且台湾的重要性让欧美不会袖手旁观。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/平安卿卿*
