--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,20 +1,18 @@
 ---
-title: 四分之一的青少年有Covid抑郁症症状
+title: 在追求正义中找到自己
 ---
-`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1923375/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923528/)
 
-翻译、整理：萧亦
-![](https://assets.gnews.org/wp-content/uploads/2022/01/01282.jpg)图片来自today.it
-一场全球性的心理健康危机正在发生，尤其是在非常年轻的人群中：与 Covid-19 大流行之前相比，青少年抑郁和焦虑的发病率翻了一番，一项研究结果表明，如今四分之一的青少年有抑郁症的临床症状和五分之一的有焦虑症迹象。
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-如果不能迅速和良好地解决青春期抑郁症，则会导致终生困难。其中焦虑、药物滥用甚至犯罪行为的风险更大，出现健康问题和复杂的社会关系以及无法实现学习和职业目标的可能性更高。
+1月21日，郭文贵先生在GTV大直播指出：
 
-为了避免其长期后果，正确的诊断加上心理治疗及在适当的情况下必须包括使用药物。特别值得一提的是，在发育年龄，许多药物仍然被排除使用。抗抑郁药可以而且必须在适当的情况下给予青少年，但必须始终进行仔细监测。
+14亿中国同胞，不要活得如同猪狗，要追求民主和法治，做有尊严、有信仰的人。尊重大自然，以善待人，以善待物，在寻找真相和追求正义中找到自己。
 
-原文链接：[https://www.today.it/benessere/psicologia/depressione-adolescenti-covid.html](https://www.today.it/benessere/psicologia/depressione-adolescenti-covid.html)
-
-责任编辑/发布：意大利达芬奇农场   萧亦
-
+*编辑：东京樱花团/墨然
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
