--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 喜币的两大缺陷 量少流通不便战友买的太便宜
+title: Hcoin生下来就是改变世界的
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923346/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923512/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
