--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,19 +1,18 @@
 ---
-title: 喜币的厉害超出想象
+title: 达沃斯党和共产党的信仰是统治全球 新中国联邦的信仰是消灭共产党
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923326/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923505/)
 
-#### 编辑/整理：澳雅大直播工作组视频剪辑小队
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-发布：陶子
+1月19日，郭文贵先生在GTV大直播指出：
 
-更多资讯，请关注：
-澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena
-澳大利亚墨尔本农场Gettr：himalayaathena
-澳大利亚墨尔本雅典娜农场YouTube
-澳大利亚墨尔本雅典娜农场Discord
-澳大利亚墨尔本雅典娜农场GTV直播1台
+达沃斯认可的共产主义思想，和中共的封建社会思想并无二致。新中国联邦的信仰是消灭中共，唯真不破；邪恶力量的信仰是统治全人类，做全人类的奴隶主。共产主义、达沃斯论坛、共济会、骷髅会、犹太民族诞生的各种宗教，都是邪恶沼泽地的分支。
 
+*编辑：东京樱花团/墨然
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
