--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 江泽明为什么要弄死成克杰
+title: Hpay即将在春节上线
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923309/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923419/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
