--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,37 +1,18 @@
 ---
-title: 美国海军向南中国海派遣两艘航母
+title: 王岐山 孟建柱 江家给习设局让习成为共产党员最恨的人
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923262/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1923390/)
 
-撰稿：银河系农场—骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-10.png)
-鉴于中共近期屡次入侵台湾空域，美国海军于1月25日向南中国海派遣了两艘航母，分别是卡尔·文森号和亚伯拉罕·林肯号，共同进行通信、反潜战和空战演习以及海上拦截行动。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2342.png)
-军事方面，美国五角大楼正在加强亚太地区的军力部署；外交方面，美国政府授权撤离美国驻北京大使馆，正在实行外交人员撤离。这意味着，美国政府和军方都认同，对中共国的战争风险在增加。
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
+1月19日，郭文贵先生在GTV大直播指出：
 
+第一，江家、王岐山、孟建柱、杨洁篪精妙设局，让习成为所有中共党员最恨的人！让习走上不归路；第二，让习经济大撒币，拖垮经济，成为沼泽地的弃子，世界经济的威胁；第三，江王孟杨控制着外交、政法、军队核心，而为习卖命的人不多。习会打台湾，实施严厉的经济政策，客观上在成就新中国联邦。
 
-总编：Ivy001
-
-编辑: 纽约香草山文艺部 – 宁文静
-
-新闻来源:
-
-[Navy sends two carriers to disputed South China Sea](https://www.washingtontimes.com/news/2022/jan/25/navy-sends-two-carriers-disputed-south-china-sea/)
-
-[美军F-35C战机坠入南海，英媒炒作美国和中国展开“打捞竞赛”](https://mil.huanqiu.com/article/46YatXCL3PJ)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
-
-校正/发稿：浪迹天涯
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-10.png)
+*编辑：东京樱花团/墨然
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
