--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,25 +1,27 @@
 ---
-title: 面对中共制裁 立陶宛表示无更名计划
+title: 美国海军向南中国海派遣两艘航母
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923191/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923262/)
 
-撰稿：台湾宝岛农场-dobi
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
-针对因台湾在立陶宛设立代表处的中文名称，中共持续对立陶宛进行制裁一事，立陶宛外长蓝斯柏吉斯于26日表示，没有变更台湾代表处名称的计划。台湾驻立陶宛代表也表示，未曾接获变更驻立陶宛台湾代表处的中文或英文名称的要求。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2339.png)
-当天，台湾驻荷兰代表接受荷媒专访，强烈批评中共国制裁立陶宛企业，胁迫欧盟企业撤出立陶宛等行动，并强调在两岸关系方面，中共的胁迫不会动摇台湾捍卫主权、民主和自由的决心。
+撰稿：银河系农场—骄子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-10.png)
+鉴于中共近期屡次入侵台湾空域，美国海军于1月25日向南中国海派遣了两艘航母，分别是卡尔·文森号和亚伯拉罕·林肯号，共同进行通信、反潜战和空战演习以及海上拦截行动。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2342.png)
+军事方面，美国五角大楼正在加强亚太地区的军力部署；外交方面，美国政府授权撤离美国驻北京大使馆，正在实行外交人员撤离。这意味着，美国政府和军方都认同，对中共国的战争风险在增加。
 
 
 
-新闻连接：
+总编：Ivy001
 
-[立陶宛外長：沒有改變台灣代表處名稱計畫](https://tw.news.yahoo.com/%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7-%E6%B2%92%E6%9C%89%E6%94%B9%E8%AE%8A%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E5%90%8D%E7%A8%B1%E8%A8%88%E7%95%AB-114935969.html%E3%80%8B)
+编辑: 纽约香草山文艺部 – 宁文静
 
-[駐荷代表接受荷媒專訪 強烈批評中國脅迫立陶宛](https://tw.news.yahoo.com/%E9%A7%90%E8%8D%B7%E4%BB%A3%E8%A1%A8%E6%8E%A5%E5%8F%97%E8%8D%B7%E5%AA%92%E5%B0%88%E8%A8%AA-%E5%BC%B7%E7%83%88%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%84%85%E8%BF%AB%E7%AB%8B%E9%99%B6%E5%AE%9B-105143595.html)
+新闻来源:
+
+[Navy sends two carriers to disputed South China Sea](https://www.washingtontimes.com/news/2022/jan/25/navy-sends-two-carriers-disputed-south-china-sea/)
+
+[美军F-35C战机坠入南海，英媒炒作美国和中国展开“打捞竞赛”](https://mil.huanqiu.com/article/46YatXCL3PJ)
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
-
-编辑：飞虹/雪梨
 
 校正/发稿：浪迹天涯
 
@@ -29,7 +31,7 @@ title: 面对中共制裁 立陶宛表示无更名计划
 [**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 [**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 [**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-10.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
