--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,69 +1,35 @@
 ---
-title: 《避风港Haven》直播内容精选（第二集）
+title: 面对中共制裁 立陶宛表示无更名计划
 ---
-`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/1923088/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1923191/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/989a6f2b-5002-4ad0-bb99-ba3f7a776ce3.jpg)
-《避风港 HAVEN》是一档定时有效，集医学科普，病案分析，治疗咨询和心理疏导的直播节目。节目的播出时间:美东时间每周二，四，六下午3点。请需要问诊的观众朋友，不要错过直播时间。Eglise医生会在节目中尽可能多的对现场询问的观众进行健康指导，希望能救助更多的人。
-
-第二集**医生问答环节：**
-
-威廉王问： 如果单纯吃青蒿素+锌+D3，补铁、补VC，能否起到预防作用，还是必须加入伊维菌素来预防？如果必须加入了伊维菌素，那么，预防中共病毒和排疫苗毒吃的都差不多了啊，很费解！
-
-**Eglise医生回答：单纯青蒿素也许行, 但青蒿素保健品的有效药物浓度极低, 不足以单独用来抵抗病毒的侵入和复制。预防和排毒并不矛盾**。**联合用药在预防和排毒中都很重要。**
-
-问：孕妇能不能每周服用一次硫酸羟氯喹，每天服用锌来预防新冠？
-
-**Eglise医生回答: 可以。关于硫酸羟氯喹：FDA在孕妇中做过临床可以安全服用的，所以，孕妇可以每周服用硫酸羟氯喹加锌来预防新冠。**
-
-问**:** 目前戴两层口罩会比戴一层口罩保护性更好一些吗？
-
-**Eglise医生解答：飞沫，也许; 病毒，不能。**带两层口罩不比带一层口罩有效。市面上口罩除了N95外，所有口罩都不能有效保证不被病毒感染，因为是空气传播的气溶胶，分子颗粒很小，可穿透除N95以外的口罩，带一层两层均只可防飞沫。注意N95也只有4小时的有效性，不可重复使用。故口罩是给地球增加垃圾不好处置的摆设用品。
-
-**手套的戴法也值得大家注意。带手套接触到外物后，均视为不洁，应用酒精喷射消毒，丢弃时应内翻向外，不可带手套淘钱包，开车等。**
-
-**其它重要知识点：**
-
-- **黑孜然子油可以给小孩吃，但给胶囊剂型的，10-20毫克每公斤剂量，不可用成人剂量。4岁以上可用。**
+撰稿：台湾宝岛农场-dobi
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
+针对因台湾在立陶宛设立代表处的中文名称，中共持续对立陶宛进行制裁一事，立陶宛外长蓝斯柏吉斯于26日表示，没有变更台湾代表处名称的计划。台湾驻立陶宛代表也表示，未曾接获变更驻立陶宛台湾代表处的中文或英文名称的要求。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2339.png)
+当天，台湾驻荷兰代表接受荷媒专访，强烈批评中共国制裁立陶宛企业，胁迫欧盟企业撤出立陶宛等行动，并强调在两岸关系方面，中共的胁迫不会动摇台湾捍卫主权、民主和自由的决心。
 
 
-- **如果只用黑孜然籽油，NAC，维生素C，D3 和锌作为预防，黑孜然子油和NAC的用量要加倍。并注重质量，比如用有机，冷榨，含百里醌至少1.3%以上的黑孜然籽油**
 
+新闻连接：
 
-- **关于阿斯匹林，因人而异。如未接种的感染者，年轻的不用服用，中年以上都建议用，以防止微血栓的形成。急性感染期后油并发症的可继续服用2周-3个月。视具体情况而定。**
+[立陶宛外長：沒有改變台灣代表處名稱計畫](https://tw.news.yahoo.com/%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7-%E6%B2%92%E6%9C%89%E6%94%B9%E8%AE%8A%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E5%90%8D%E7%A8%B1%E8%A8%88%E7%95%AB-114935969.html%E3%80%8B)
 
+[駐荷代表接受荷媒專訪 強烈批評中國脅迫立陶宛](https://tw.news.yahoo.com/%E9%A7%90%E8%8D%B7%E4%BB%A3%E8%A1%A8%E6%8E%A5%E5%8F%97%E8%8D%B7%E5%AA%92%E5%B0%88%E8%A8%AA-%E5%BC%B7%E7%83%88%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%84%85%E8%BF%AB%E7%AB%8B%E9%99%B6%E5%AE%9B-105143595.html)
 
-- **感染经伊维菌素治疗康复后还咳嗽，幼儿可以在家里用NAC气雾治疗。或者由医生开具的低浓度类固醇激素-布地奈德（Budesonide），就是治疗哮喘用的，一天2次，2-3周。成人用Budesonide，或NAC自制鼻喷液，用台式或手持的做气雾治疗，一天可以多次，预防用一天2次即可。**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/DF35BE3A-9D79-47E4-8A21-48314159620B.jpeg)
 
+编辑：飞虹/雪梨
 
-**另外，Eglise 医生认为营养均衡，坚持健身，保持肌体健康可有效抗击病毒。**如果食物中不能摄入足量维生素，必须从保健品中获取。比如B族维生素等是维系健康的基本营养素。Eglise医生给予维生素B族和食补的关系图如下：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/photo_2022-01-28_21-17-38.jpg)美工设计：女农![](https://assets.gnews.org/wp-content/uploads/2022/01/photo_2022-01-28_21-17-48.jpg)美工设计：女农
-**最后，青蒿素和伊维菌素的特殊药理机理，可以有效解除刺突蛋白。但必须牢记在心的是，由于无法测定体内刺突蛋白的含量，所以解毒排毒的过程必须是长期的，持续的，按一定疗程的进行，不能因为没有体征表现而忽略。**
-视频剪辑：Gloria/外星人
-一具良方
+校正/发稿：浪迹天涯
 
-一座安全的避风港
-
-一同治愈
-
-一道启航
-
-Eglise医生，美东时间每周二四六的下午3点直播见。
-
-直播频道：喜马拉雅纽约磐石农场一台
-
-[直播链接：](https://gtv.org/video/id=61f056c428a108147c62a8c4)
-
-文案：Eglise，万物有灵
-
-速记整理：Gloria
-
-美工：女农
-
-编辑/发布：Jenny
-![](https://assets.gnews.org/wp-content/uploads/2022/01/磐石discord.jpg)磐石农场Discord二维码![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)
-
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2150.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
