--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,7 +1,7 @@
 ---
-title: 永远好事儿必须得考虑老椅子
+title: 台湾金控的无知
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923798/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1923905/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
