--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: G系列的魅力（1）
+title: 共产党虐待出卖这些国家的所有人的利益
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926046/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926076/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
