--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥对情报判断为什么总是那么准确
+title: 七哥相信奇门遁甲
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926390/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926436/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
