--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 医疗专家正在死亡
+title: 七哥随时知道习近平行踪
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926375/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926410/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
