--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 自己判断能力加上天力相助
+title: 我们这次文明的力量，超越人类历史上的任何一次
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926754/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926847/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
