--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 我们这次文明的力量，超越人类历史上的任何一次
+title: 我们来这世界不是混吃等死每天重复
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926847/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926919/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
