--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 最大的礼物就是没打疫苗
+title: 我们这次文明的力量，超越人类历史上的任何一次
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926784/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1926847/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
@@ -13,8 +13,6 @@ title: 最大的礼物就是没打疫苗
 澳大利亚墨尔本雅典娜农场YouTube
 澳大利亚墨尔本雅典娜农场Discord
 澳大利亚墨尔本雅典娜农场GTV直播1台
-
-
 
  
 
