--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 爹娘是自己最好的老师
+title: 爆料革命靠什么成功
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927091/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927167/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
