--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,9 +1,11 @@
 ---
-title: 如果不是天意一切都没有可能发生
+title: 一步一脚印物理的生活
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927081/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927155/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
+
+发布：陶子
 
 更多资讯，请关注：
 澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena
