--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 千招会不如一招绝
+title: 爆料革命靠什么成功
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927109/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927167/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
