--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 一步一脚印物理的生活
+title: 不要因为你一生的失败你就怀疑一切的胜利
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927155/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927179/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
