--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 科学是手段 信仰是我们终极的力量
+title: 爆料革命靠什么成功
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927132/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927167/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
