--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党勾结西方超限战
+title: 法律是人类安全公平的基础
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927931/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927943/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
