--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 达沃斯就是世界的共产党
+title: 要找病毒疫苗源头就找达沃斯
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928469/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928488/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
