--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 人民币的溢出效应
+title: 房地产的溢出效应
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928369/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928404/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
