--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 人间就有鬼神人不生不灭（2）
+title: 背后黑手会报复我们
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930808/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1930858/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
