--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥包容不了说假话还有傻人
+title: 爆料革命成为精子卵子革命
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931882/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931916/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
