--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 沼泽地对人类的大犯罪
+title: 共产党都看爆料和了解各个战友
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931821/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931858/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
