--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦已经代替沼泽地
+title: 习王孙是我们的反面战友
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931816/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931851/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
