--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党都看爆料和了解各个战友
+title: 怎么能让孩子打疫苗
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931858/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931888/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
