--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 习王孙是我们的反面战友
+title: 七哥包容不了说假话还有傻人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931851/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931882/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
