--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 王孟江家这个局设计的很高妙
+title: 辨别真假善恶的基础真能救人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931845/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931912/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
