--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党不是沼泽地的主角，也必死无疑
+title: 疫苗对人类的大冲击
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931866/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1931921/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
