--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 醒来
+title: 香草山农场战友2022年新年祝福
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932441/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932443/)
 
 制作：香草山视频部
 
