--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 香草山农场2022年新年晚会开场
+title: 功夫
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932445/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932447/)
 
 制作：香草山视频部
 
