--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 香草山农场战友2022年新年祝福
+title: 香草山农场2022年新年晚会开场
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932443/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1932445/)
 
 制作：香草山视频部
 
