--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 法律这个词的来源
+title: 共产党的法律
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936819/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1936914/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
