--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,57 +1,37 @@
 ---
-title: 爆料革命吸取六四教训以不流血没有伤亡的超超限战灭共
+title: 美国否认中共官媒指控其“将国际体育赛事政治化”的说法
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937148/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1937199/)
 
-G-TV视频链接：[https://gtv.org/video/id=61f77f25d90bdd2085a300b6](https://gtv.org/video/id=61f77f25d90bdd2085a300b6)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/6c12ddb68e9a7f360d0b6286e4c66a9d4.jpg)yahoo
+美国否认中共官媒关于美国正在 “制定一项计划”，以怂恿运动员在即将举行的北京冬奥会上消极比赛，并“将国际体育赛事政治化”的说法。官媒《中国日报》在周五发表的一篇报道中援引不具名的消息来源，发表了这一说法。
 
-**郭文贵先生：**可以这么说吧，你会看到我们用的是奇门遁甲里边最高的段落：无兵，没有流血，没有伤亡，绝对没有，我跟你保证一个咱战友在前面掺合的都没有，而且会让共产党彻底就傻眼！七哥崇拜的就是最高的境界，就远在万里之外就把敌人消灭在无形之中。
+报道称：“消息人士表示，该计划包括鼓动各国运动员表达对中国不满，在比赛期间消极比赛，甚至不参加比赛。”报道声称，华盛顿当局将奖励参与“计划”的运动员，并调动资源，保护选择消极比赛的运动员的“个人声誉”。据报道，“消息人士强调，华盛顿的计划是美国一些反华势力试图将体育运动政治化，蓄意干扰破坏北京冬奥会的又一例证。”但官媒没有为这些说法提供证据。然而，这些指控遭到了美国的否认。
 
-我会让他在《甜蜜蜜》的歌声当中，非常痛苦地听着我们的《甜蜜蜜》，一直响着（七哥唱）“在哪里？”让他找在哪里？就哭着喊在哪里？在哪里呀？是吧，他找不着我们的，他导弹都打不着我们，我们到时候看着直播就看着他在那儿哭着喊着在哪里呀？是吧！咱们高兴地唱着“在哪里？”
+美国大使馆发言人周六通过电子邮件告诉路透社：“我们过去和现在都没有协调关于参与任何奥运会的全球运动。”并补充说：“美国运动员有权根据奥林匹克精神和章程自由地表达自己，包括推进人权进程。”
 
-七哥的段落哪儿那么低啊，现在的人类再想火战，再想着用那个愚蠢的这种直接对抗，砸玻璃、砸门窗、砸汽车这种运动，那已经是很愚蠢了。“茉莉花革命”成功在于就是社交媒体，在“茉莉花革命”之后最高段落的革命，你会看到爆料革命我们过去这5年，完全是最高段落的革命：不流血、不用人牺牲、不用烧汽车砸窗户，也不用人上街冒着这样那样的危险，我们就能把邪恶的最大的魔鬼置于半死的境地——塔西佗陷阱，全世界人都把会它当做敌人，
+这位发言人指的是美国对奥运会的外交抵制，美国不会派政府代表团参加奥运会，但会允许来自该国的个人运动员参加奥运会。该声明还回击了中共国，并重申了美国抵制冬奥会的理由。这位发言人说，这个亚洲巨头将继续“误导 ”公众，以便于其“转移人们对其恶劣的人权记录的关注”，指的是广泛报道的关于中共在新疆地区侵犯人权的指控。
 
-而让它自己犯错。在足球场上你看郝海东先生踢球，最高的段落就是让你自己犯规然后让我把球进去，是吧！最牛的球星，最牛的！你看巴西踢球，最关键时候“噔”就让你犯规，然后罗纳尔多呀什么这些人呢就轻松地把球往后面一拨拉就给拨拉进去了，是吧。咱要的就是这段落呀，让它犯规！
+在这家官媒的指控之前，中共国在最近几周还提出了一系列其他指控。据美联社报道，中共外交部长王毅周四早些时候在与美国国务卿安东尼·布林肯(Antony Blinken)的通话中要求美国停止对冬奥会的“干涉”。
 
-你看这冬奥会，是吧，冬奥会它不就犯规了嘛，你这种情况下，疫苗灾难，是吧，病毒，你还搞这样。新疆大屠杀它犯规了，是吧。香港，它犯规了，是吧。然后就让它一个犯规一个犯规地让它走，然后咱一个球一个球往里进。我们没有郝海东先生跑那么厉害，踢那么多球，但是我要叫对方一直犯规，我就站那而我就把球给踢进去了。
+这位部长还抱怨说，美国没有改变其对中共国强硬的经济政策。中共当局上个月表示，同样参与外交抵制奥运会的英国、加拿大和澳大利亚将为他们“错误的行为”“付出代价”。
 
-现在我玩儿的高段落，我就不用站着，我就在场外让他们都犯规，把对方都罚下去，咱自己一下子就玩儿球，是吧？我在那块儿糊弄糊弄就把球给它进去了，就这意思，不用担心，我给你保证一个战友都不会牺牲，甚至连冒险都不会。绝不会像那期民贼似的，你捐钱，然后捐完我钱，你去上街上去叫共产党把你弄死，叫共产党把你抓起来，这种期民贼就比杀人犯还可怕。
+**简评：**中共把举办冬奥会当作是一场向国际社会和国内老百姓展示其“抗疫清零成功”的政治秀。然而，国际社会却并不买账，先是有美国外交抵制冬奥会，不派遣政府代表团参加，随后，英国、加拿大、澳大利亚也相继宣布外交抵制。这些抵制背后的根本原因在于，民主国家阵营已经看清楚中共的极权统治本质。中共政权一边继续对新疆维吾尔人实施种族灭绝和强迫劳动等侵犯人权的恶行，一边呼吁国际社会要遵守奥林匹克宪章精神，而《奥林匹克宪章》明确指出，体育运动也是一项人权。这种违背常识和逻辑的语言也只有流氓的中共政能够在大庭广众之下公然说出来。
 
-这就是刚才澄道关心的我们的英雄，就我们的英雄当时我就说的，我说你不要这么弄下去，他说我们这场上街一定是失败的，这么小孩不到18岁的孩子，他说我们没有武器，我们也没力量，他说我们光有我们的追求，他们一定把我们弄死，我们就第一天开始就准备，我跟你们说过，他母亲也是这个运动的支持者，也是高等教育者，他母亲就给他说：你掺乎这事儿你就最终被干死。他就是准备好牺牲去了，所以他才能那么从容，他没想到这个事儿他就能赢。
+《奥林匹克宪章》还指出，奥林匹克精神是相互理解、友谊、团结和公平竞争的精神。奥林匹克精神不仅强调宽容和理解文化差异，还强调竞技体育的公平和正义，人人平等。凡此种种在独裁的中共政权统治下的中共国早已荡然无存，看看如今被中共释放的新冠病毒折腾得一片狼藉的世界，如果中共政权不除，全世界都将永远陷入中共制造的黑暗之中，人类是时候觉醒了。
 
-只有在所谓的“6·4”拿绿卡这帮孙子，以为自己能跟共产党谈个条件，是吧？我们不推翻共产党，但是你让我们如何如何，那这都是找死，那帮王八蛋才真的是骗子，最大的骗子。就像咱们这个英雄，这位处男被定为强奸罪的人，他是绝对做好了牺牲的准备的，他所以才从容。
+新闻链接：[https://news.yahoo.com/us-denies-chinese-media-claims-114920433.html](https://news.yahoo.com/us-denies-chinese-media-claims-114920433.html)
 
-但我们现在我这场革命在“6·4”当中吸取了教训，决不硬碰，你硬碰你干不过共产党，你玩儿武力你干不过它，你自己先没了，是吧？第二，咱们要用现代化的，他叫超限战，我叫超超限战。你放心新中国联邦现在就咱玩儿的这套，就全世界都在学习咱。先强大经济、强大媒体、强大团队、统一思想、坚决灭共，团结世界地球上可能的力量。现在连冤魂野鬼都跟咱站在一起了，是吧？万佛万神都跟咱站在一起了，是吧？连现在被吃的狗肉现在都要从Isobel Yeung肚里头爬出来了，都在帮咱了，你想想咱们启动的是什么力量？
+* * *
 
-今天这个直播绝对是未来在历史上会成就一个非常重要的一场人类正义的、革命的、非常有军事和人权、法制、媒体参考的标志性的一场直播。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
 
-编辑整理：Jacques；
+编辑：【英国伦敦喜庄园编辑部】
 
-字幕文件制作：大好河山；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
