--- a/gnews/60.md
+++ b/gnews/60.md
@@ -1,173 +1,155 @@
 ---
-title: 中共国希望将美国文化女性化以进行控制
+title: 玛乔丽·泰勒·格林: “这个国家现在有很多的问题都指向福奇博士”
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1879630/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1871060/)
 
-**Steve Bannon
-史蒂夫·班农**
+Marjorie Taylor Greene (the U.S. representative of Georgia)
+玛乔丽·泰勒·格林 (美国佐治亚州众议员）
 
-Ken Blackwell, I want to go back this about this central issue of masculinity
-肯·布莱克威尔, 我想回到这个关于男子阳刚之气的核心问题
+I’m just happy to see that that the media and you know
+我很高兴看到媒体和你知道
 
-and trying to de masculinity this whole attack on males overall
-当试图去男性化对男性整体进行攻击
+my colleagues here on Capitol Hill are starting to catch up what
+我在国会山的议员同事们开始跟上了
 
-but particularly on black men
-但尤其是对男性黑人
+what the American people have known all along
+美国人民一直都知道的
 
-Walk us through what that attack is
-引导我们了解攻击的是什么
+none of us trusted Fauci
+我们都不信任福奇
 
-and how does that translate to the practical politics
-以及这如何转化为实际的政治
+And that’s why I introduced the Fire Fauci Act early early last year
+这就是为什么我在去年初介绍了《解雇福奇法案》
 
-we need to basically destroy root and branch the Democratic Party in November this year
-我们需要在今年11月基本击败民主党
+because this is the man that is at the root of all of our problems
+因为这个人是我们所有问题的根源
 
-Ken Blackwell (Commentator, Former Ohio State Treasurer)
-肯·布莱克威尔（评论员，前俄亥俄州财政部长）
+But I’d like to walk back even a little further
+但我还想往回走得更远一点
 
-Steve, It really did start at an accelerated pace with the Great Society Program
-史蒂夫，它确实从大社会主义计划开始加速
+Steve, I’m going to go ahead and say this
+史蒂夫，我要继续将这个说下去
 
-when in fact they created an incentive system to break up the family
-事实上，他们创造了一个激励系统来打破家庭
+and it’s been upsetting to me ever since it happened
+自从病毒发生以来，我一直很不安
 
-and to drive unemployed a low wage of black males out of the family
-以及将低工资的黑人男性赶出家庭
+But when we shut our country down
+但是当我们关闭我们的国家时
 
-they created a penalty box for intact families
-他们为完整的家庭创造了惩罚箱
+when we shut it down to so called slow the spread
+当我们关闭国家以所谓的减缓传播时
 
-1960s there were many intact black families as my family
-1960年代有许多完整的黑人家庭就像我的家庭
+I knew we broke America. We broke our country
+我知道我们破坏了美国，我们破坏了我们的国家
 
-The Great Society Program accelerated the attack on the black on the black males
-大社会计划主义加速了对黑人男性的攻击
+When that happened, we stopped the supply chain
+发生这种情况时，我们停止了供应链
 
-We were experiencing that
-我们正在经历这种情况
+We, you know, factories whose machines stay up running 24 hours a day had to shut down
+我们，你知道，那些机器一天 24 小时保持运转的工厂不得不关闭
 
-I’ll just go to TikTok, the feminization of America
-我用抖音举例，美国的女性化
+people went home and that is really what broke our country
+人们回家了，而且这真的是我们国家崩溃的原因
 
-and America America’s family unit which is not a family unit
-而美国的家庭单位，它不是一个家庭单位
+and now it’s going to take a very long time to get back on track
+现在需要很长时间才能回到正轨
 
-‘cause Marxism so big government socialist, they all destroyed the family
-因为马克思主义这么大的政府社会主义者，他们摧毁了家庭
+And the biggest problem is, is we have people here in Washington
+最大的问题是，我们在华盛顿这里的人
 
-because they want to create a dependency on the government
-因为他们想建立人们对政府的依赖
+that are serving global interests or are interested in helping the great reset happen
+为全球利益服务或有兴趣帮助大重置的发生
 
-They want you on the tip of big government so they can control you
-他们想让你站在大政府的施舍上，这样他们就可以控制你
+and are not serving the American people
+并且不为美国人民服务
 
-They’ll move you from being a free citizen to being a subject
-他们会让你从一个自由公民变成一个臣民
+Inflation is very scary and it’s getting out of control.
+通货膨胀非常可怕，而且正在失控
 
-Now what black males have experience it’s that they in fact around in reality
-现在黑人男性在现实中的经历可以追溯到
+When the Fed is going to have to step in and raise interest rates
+当美联储将不得不介入并提高利率时
 
-and they see that the left is one pushing a feminization of our community and our America
-他们看到左派正在推动我们社区和美国的女性化
+We have long term problem that will not end by next year
+我们有长期的问题，明年不会结束
 
-And they are in fact, continuing to zero in on males
-事实上，他们正在继续对男性进行调查
+they’re not going to end it two years
+他们不会在两年内结束它
 
-the Chinese Communist Party along with big government marches in general
-中国共产党和大政府普遍推行
+Here’s here’s the real issue when the cost of producing goods has increased so much
+当生产商品的成本增加如此之多时，这才是真正的问题
 
-which it’s Putin in Russia
-就是在俄罗斯的普京
+and then the ability to provide the goods to the consumer are completely disrupted
+然后将商品提供给消费者的能力被完全破坏
 
-they understand that they can feminineness the American culture
-他们明白他们可以使美国文化女性化
+We have stagflation, but we also have real problems
+我们有滞胀，但我们也有真正的问题
 
-they in fact, they gain an advantage on the battlefield
-事实上，他们在战场上获得了优势
+The biggest problem driving the cost of producing goods is several factors
+推动商品生产成本的最大问题是几个因素
 
-What we have to do is to understand that black males are ready to speak up
-我们要做的是了解黑人男性已经准备好发声
+One of them is this mass COVID testing
+其中之一就是这种大规模的COVID测试
 
-Our get to do is to go to Chicago and they are tired of this mess
-我们要做的就是去芝加哥，他们厌倦了这个烂摊子
+mass COVID testing is continuing the panic in this in the society
+大规模的COVID测试正在继续在社会中引起恐慌
 
-And in fact, we need to say, look, we have an agenda for freedom
-事实上，我们需要说，看，我们有一个自由议程
+and but it’s also giving people a reason to get out of work.
+但病毒也造成了人们失业
 
-We have an agenda for self sufficiency
-我们有一个自给自足的议程
+You know what if you have a positive COVID test, whether you’re sick or not
+你知道如果你的COVID测试呈阳性，无论您你是否生病
 
-We have an agenda that respects your human agency and your human dignity
-我们有一个尊重你的人的能动性和你的人格尊严的议程
+you have to stay home, and that means
+你必须待在家里，而且这意味着
 
-and we can begin to move not in next two years, not in four years
-我们可以开始行动，不是两年后，不是四年后
+that it’s more expensive for the company to continue producing the goods or services that they provide
+公司继续生产他们提供的商品或服务的成本会更高
 
-but this year in this election, we can change things in the margin
-而是在今年这次选举，我们可以在很大程度上改变一些事情
+because they less have less people there at work
+因为他们工作的人少了
 
-you get black males voting for MAGA candidates
-让黑人男性投票给使美国再次伟大的候选人
+And then you have less people to unload the train, unload the cargo, put it back on the shelf
+然后你就没有多少人来卸火车，卸货物，把它放回货架上
 
-who in fact, respect human dignity, respect the family, respect work, and respect freedom
-事实上，是尊重人的尊严，尊重家庭，尊重工作，尊重自由的候选人
+I mean, we have so many serious problems
+我的意思是，我们有很多严重的问题
 
-you in fact, we’ll win elections for the next 50 or 100 year
-事实上，我们将赢得未来 50 或 100 年的选举
+and we can point it all at one man that is Dr. Fauci
+我们可以把这一切都指向一个人，那就是福奇博士
 
-Steve Bannon
-史蒂夫·班农
+Dr. Fauci is responsible for all of this, he created the gain of function
+福奇博士对此负一切责任，他创造了功能增强研究
 
-Ken, how do people get you on social media? How do you get your website?
-肯，人们如何在社交媒体上找到你？ 如何得到你的网站？
+He gave it to China, they created the bio weapon
+并把它给了中共，中共创造了生物武器
 
-Ken Blackwell
-肯·布莱克威尔
+which is COVID-19 and it broke the world
+这就是COVID-19，它破坏了世界
 
-Kenblackwell.com, @kenblackwell on Gettr, and twitter
-Kenblackwell.com, @kenblackwell在盖特和推特
+but our government and anyone that goes along with this
+但如果我们的政府和任何工作人员
 
-I’m deemphasizing on Twitter
-我正在淡化推特
+and doesn’t fire Fauci, investigate him, prosecute him
+不去解雇福奇，调查他，起诉他
 
-And we’re growing like gangbusters on Gettr
-而且我们在盖特上的发展势头迅猛
-
-Steve Bannon
-史蒂夫·班农
-
-Ken, honor to have you on here. Sir, thank you
-肯，很荣幸有请你在这里， 先生，谢谢你
-
-Ken Blackwell
-肯·布莱克威尔
-
-Good be with you
-高兴和你一起
-
-Steve Bannon
-史蒂夫·班农
-
-Thanks, brother
-谢谢， 兄弟
+and hold him accountable is failing the American people
+追究他的责任，那就是辜负美国人民
 
 * * *
 
-Date:01/18/2022
-原视频标题: China Wants To Feminize The Culture Of America For Control
-中共国希望将美国文化女性化以进行控制
-原视频日期：2022/01/18
-原视频链接: [**https://rumble.com/vsrm97-china-wants-to-feminize-the-culture-of-america-for-control.html**](https://rumble.com/vsrm97-china-wants-to-feminize-the-culture-of-america-for-control.html)
-任务编号：KE356(3526)
-视频时间段 : 0:00-3:29
+Date:01/15/2022
+原视频标题: “So many problems in this country right now point to Dr. Fauci”, -Marjorie Taylor Greene
+玛乔丽·泰勒·格林: “这个国家现在有很多的问题都指向福奇博士”
+原视频日期：2022/01/15
+原视频链接: [**https://gettr.com/post/po3i1m18dc**](https://gettr.com/post/po3i1m18dc)
+任务编号：KE350（3492）
+视频时间段 : 0:00-2:44
 英听校：洛杉矶盘古农场 – Layka
 翻译：洛杉矶盘古农场 – Layka
 翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场 – 天涯行
-审片：洛杉矶盘古农场 – 银龙
-发布：洛杉矶盘古农场 – 恩典
+字幕+视频制作： 洛杉矶盘古农场 – 天涯行
+审片： 洛杉矶盘古农场 – 银龙
+发布： 洛杉矶盘古农场 – 恩典
 [![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
 洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
