--- a/gnews/61.md
+++ b/gnews/61.md
@@ -1,154 +1,44 @@
 ---
-title: 我们的加息系统是负利率设置的，人们不了解我们的金融体系将发生的创伤将影响您的个人生活
+title: 介于北京与新中国联邦之间的塞浦路斯左右为难，暂停了中共国当局的引渡要求
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1878442/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1857256/)
 
-[https://gtv.org/video/id=61e6a22e87664c47acd645e2](https://gtv.org/video/id=61e6a22e87664c47acd645e2)
+2022-01-13
 
-**Steve Bannon:
-史蒂夫班农:**
+编译：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1021-edited.png)图片来源：《国家先驱报》， 2022 年 1 月 12 日本文朗读版视频，作者16626
+**新中国联邦（国）得到美国的间接承认**
 
-I just want to make sure we go through it one more time
-我只是想再一次明确实一下
+国家先驱报（2022 年 1 月 12日）针对塞浦路斯当局应国际刑警组织的红色通缉令的要求逮捕并准备引渡两名涉嫌欺诈罪的中国人的事件发表题为《介于北京与华盛顿之间的塞浦路斯––中国要求引渡两名受美国支持的（中国异议）活动人士》的评论文章指出：“（塞浦路斯）处理中国要求引渡两名受美国支持的（中国异议）活动人士的事件……变得复杂化。这两名被拘留者是新中国联邦（国）的成员和政治活动家。”
 
-The numbers a day you’ve had CPI now PPI
-你每天的数字是消费者物价指数，现在是生产者物价指数
+该篇评论文章还指出，这两名做为新中国联邦（国）成员的政治活动家所从事的政治活动是由郭文贵和史蒂夫·班农（Steve Bannon）发起的，其既定目标是推翻中国共产党（CCP），进而推翻中国政府。
 
-Come by and tell people this is…
-过来告诉人们这是…
+新中国联邦（国）或称为中国的“流亡政府”于2020年6月4日在纽约市成立，并得到美国的间接承认。
 
-I’m stunned in my lifetime，given what we’ve seen before that we ever get these things
-鉴于我们之前所见，我们曾经得到过这些东西，我有生以来都惊呆了
+另外该篇评论文章还提到法治基金（[Rule of Law Foundation](https://rolfoundation.org/en/)）。法治基金于 1 月 5 日上周三发出信函给塞浦路斯司法和公共秩序部，同时也发送给内政部。法治基金是一个同样位于美国（纽约）的激进组织，旨在为中华人民共和国的人权提供保护服务。作为其活动的一部分，它对中国执政党（CCP）的成员采取了合法的法律行动。
 
-And this is dangerous
-这是很危险的
+法治基金（ROL）发出的信函中指出，被捕的女子自 2020 年 4 月以来一直是法治基金的成员和支持者。
 
-No. 1 our system for these rate increases is talk trying to choke this down
-now our system is set up for negative interest rates
-第一，我们的这些加息系统是试图扼杀这种情况，现在我们的系统设置为负利率
+**塞浦路斯当局正面临两难境地**
 
-People don’t understand that the trauma that is going to happen in our financial system
-人们不明白我们金融体系将要发生的创伤
+塞浦路斯当局正面临两难境地。一方面是塞浦路斯与友好的中国达成了协议。另一方面是塞浦路斯必须面对这些在美国的保护下运作有组织的团体（新中国联邦和法治基金）。这些有组织的团体（新中国联邦和法治基金）呼吁停止政治迫害，并关注人权问题。
 
-That’s going to roll into your personal life, okay?
-将会影响每个人生活，知道吗？
+塞浦路斯共和国过去在处理俄罗斯联邦提出的引渡该国公民的请求中也曾处于相同的两难困境。这是由于担心这些外国国民（俄罗斯联邦提出引渡的公民）在被引渡后将面临的后果。
 
-No. 2 run-away inflation has many bad things that happens when that happens Steve Cortes
-第二，通货膨胀失控时有很多不好的事情发生，交给史蒂夫科尔特斯
+**其它美国机构的官方声明与法治基金信函**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1023.png)图片来源：《KNEWS报》， 2022 年 1 月 12 日
+KNEWS报（2022 年 1 月 12日）针对塞浦路斯当局逮捕并准备引渡两名涉嫌欺诈罪的中国人的事件也发表题为《塞浦路斯的引渡案变得政治化，美国的支持给来自中国的母子两人的引渡问题增加了新的变数》的评论文章指出，中共国对两名涉嫌欺诈罪的中国人的逮捕令是出于政治动机。中共国有虚假指控海外华人的可查证的记录，这些虚假指控旨在镇压反对中国共产党的行动。
 
-Steve Cortes:
-史蒂夫科尔特斯:
-You’re exactly right Steve
-你是非常对的，史蒂夫
+该篇评论文章还指出**，**该组织在法治基金发出的信函中还附带有其它美国机构的官方声明，这些美国机构的官方声明称他们也支持法治基金发出的信函的观点。
 
-Look, if we look at history we see that a lot of political upheaval
-看，如果我们回顾历史，我们会看到很多政治动荡
+**参考资料及图片来源**：
 
-upheaval that we could say the least evil actually results from inflation
-我们可以说最小的邪恶动荡实际上是由通货膨胀造成的
+1. 国家先驱报，Εθνικός Κήρυξ，2022 年 1 月 12，ΚΟΙΝΩΝΙΑ，Η Κύπρος μεταξύ Πεκίνου – Ουάσιγκτον – Αίτημα έκδοσης από Κίνα για δύο ακτιβιστές που στηρίζουν οι ΗΠΑ， [https://www.ekirikas.com/i-kypros-metaxy-pekinou-ouasigkton/](https://www.ekirikas.com/i-kypros-metaxy-pekinou-ouasigkton/)
+2. KNEWS，Newsroom，2022 年 1 月 12，Extradition case in Cyprus gets political，Mother and son from China face extradition as American support is thrown into the equation，[https://knews.kathimerini.com.cy/en/news/extradition-case-in-cyprus-gets-political](https://knews.kathimerini.com.cy/en/news/extradition-case-in-cyprus-gets-political)
 
-If we look at country that were formally extremely successful places like Venezuela and Argentina in our own hemisphere
-如果我们看看在我们自己的半球有像委内瑞拉和阿根廷这样在形式上非常成功的国家
 
-If we look at Germany pre-World War II
-如果我们看看二战前的德国
-
-We can see that inflation leads ultimately to abord authoritarianism and totalitarianism
-我们可以看到通货膨胀最终导致社会走向威权主义和极权主义
-
-And in a country that is already as polarized as the United States is
-而在一个已经像美国这样两极分化的国家
-
-This kind of inflation is not just bad economics
-这种通货膨胀不仅仅是糟糕的经济学
-
-It’s actually societally dangerous for our country
-它实际上是对我们国家的社会危险
-
-And that’s why we need to be cleared-eyed about what it is and about policy solution
-而这就是为什么我们需要清楚它是什么，以及政策解决方案是什么
-
-Because Steve, we can’t just curse the darkness
-因为，史蒂夫，我们不能只是诅咒黑暗
-
-We have to do that, yes
-是的，我们必须这样做
-
-But as lamentable as this current economic quagmire is
-但与当前的经济泥潭一样可悲的是
-
-This is stagflationary embroil that we face right now in America
-我们美国现在面临的滞胀困境
-
-It does also, Steve, present political opportunity
-史蒂夫，它也确实提供了政治机会
-
-Political opportunity to solidify the America first cost as the lasting secular ship in favor of working class Americans
-巩固美国作为有利于美国工人阶级的持久世俗之船的首要成本的政治机会
-
-and to transform the republican party, not of the parties of the chased right
-并改变共和党，而不是被追逐的权利的政党
-
-But instead, into a party of working class Americans that is truly multi-ethnic and multi-racial
-反而成为一个真正多民族和多种族的美国工人阶级政党
-
-And the polling is starting to show us that political opening is there
-民意调查开始向我们表明政治开放是存在的
-
-If we have the guts and the gumption to cease it of course the right policies mix as well
-如果我们有勇气和进取心去停止它，当然正确的政策也会混合在一起
-
-For example, as I mentioned yesterday in the show
-例如，正如我昨天在节目中提到的
-
-I think the most powerful way right now to win both politically as well as get the economy back on track
-我认为目前最有力的方式是去赢得政治上以及让经济重回正轨
-
-get the inflation in control again
-再次控制通胀
-
-and get wages rising is inflation motive
-并提高工资就是通胀动机
-
-We need to absolutely stop illegal migration in this country
-在这个国家，我们需要绝对阻止非法移民
-
-and I believe we need a pause in even legal migration to this country
-并且我相信，就算是合法移民也需要适当暂停
-
-A pause in H-1B and other similar would work which is why let the American people wages starts to rise
-H-1B和其他类似的暂停会起作用，这样可以让美国人的工资开始上涨
-
-So that we see real wages take off again the way they did under Donald Trump
-这样我们就可以看到实际工资再次像唐纳德-川普领导下那样飞腾
-
-instead of the way they are crashing right now under Joe Biden
-而不是现在在乔-拜登领导下崩溃的方式
-
-So, it’s calamity but there’s always opportunity as well in calamity
-因此，这是灾难，但灾难中也总是有机会的
-
-* * *
-
-Date: 01/13/2022
-原视频标题: 我们的加息系统是负利率设置的 人们不了解我们的金融体系将发生的创伤 将影响您的个人生活
-Our system is set up for negative interest rates. People don’t understand the trauma that’s going to happen in our financial system that’s going to roll into your personal life.
-原视频日期：2022/01/13
-原视频链接: [https://gettr.com/post/po5vfe12f0](https://gettr.com/post/po5vfe12f0)
-任务编号：KE353（3494）
-视频时间段 : 0:00-02:52
-
-英听校：洛杉矶盘古农场 – 郭班之樱
-翻译： 洛杉矶盘古农场 – 郭班之樱
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场 – 天涯行
-审片：洛杉矶盘古农场 – 银龙
-发布：洛杉矶盘古农场 – Kevin37L
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
-
+编辑发布：MQ
+![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
