--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,21 +1,22 @@
 ---
-title: 捷报：伊维菌素终于被认可
+title: 美提书面答复 力促俄奉行外交路线化解乌克兰危机
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1937041/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/1937086/)
 
-撰稿：东京樱花团/闻雨
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2590.png)[图片来源](https://www.fwbusiness.com/covid-19/article_d602bf9d-afe9-5337-96c5-fd37b7e62846.html)
-东京 1月31日（路透社）报道：兴和制药公司（名古屋）1月31日表示，兴和已与北里大学完成了一项关于伊维菌素治疗中共病毒（新冠状病毒）感染的临床前研究。通过与北里大学的联合非临床研究实验，证实了伊维菌素对治疗中共病毒（新冠状病毒）感染，无论是对德尔塔（Delta）毒株还是对奥米炕（Omicron）毒株都有相同的抗病毒效果。
+[撰稿日期]：2022.1.27
 
-伊维菌素是根据北里大学名誉教授大村智先生的研究开发的，他在2015年获得了诺贝尔生理学•医学奖。伊维菌素主要在非洲国家被用作治疗寄生虫感染。
+[署名]：台湾宝岛农场dobi
 
-我们新中国联邦一直在呼吁，要求用伊维菌素治疗中共病毒，现在终于得到了证实。兴和制药公司用科学实验验证了这一切。期待着今后伊维菌素在治疗中共病毒方面发挥最大的作用。
+[新闻连接]： 《https://udn.com/news/story/122663/6063923?from=udn-catelistnews\_ch2》
 
-信息来源：[興和、「イベルメクチン」のオミクロン株への抗ウイルス効果を確認](https://news.yahoo.co.jp/articles/4924fb35eaa89d16884e9562defa71572857e2f7)
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+
+在俄罗斯和乌克兰冲突一触即发的危机局势中，俄罗斯要求北约和美国不得同意乌克兰加入北约盟国，并反对北约盟国提供乌克兰安全协助，泛称为「北约东扩」。针对俄罗斯的要求，美国和北约盟友目前虽仍未松口，但美国答应以书面方式回复俄罗斯；北约也在26日向俄罗斯大使馆交付书面答复，并宣称北约与美国立场一致，呼吁俄罗斯退兵。
+
+美国国务卿布林肯（Antony Blinken）表示，就看俄罗斯反应，美国准备好进入下一步协商，力促俄罗斯奉行外交路线。
+
+俄罗斯外交部长拉夫罗夫（Sergey Lavro）则表示，若不满意美方答复，不会坐视俄罗斯的要求陷入无尽的讨论，且若西方持续胁迫，莫斯科将会采取必要的报复作为。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
