--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,45 +1,51 @@
 ---
-title: 纽约男子杀害三名亚裔后被判送精神病院
+title: 基辅和台湾发生的事情最终会使美国被迫加入并消灭邪恶
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1937036/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937076/)
 
-**编译：wenwu**
+G-TV视频链接：[https://gtv.org/video/id=61f77cd7d90bdd2085a2ffc3](https://gtv.org/video/id=61f77cd7d90bdd2085a2ffc3)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip12纽约男子杀害三名亚裔后被判送精神病院.png)图片来源：news.yahoo.com
+**郭文贵先生：**我觉得普京在乌克兰的很多人都在说，这咱们说的最早的啊，我们是全世界最早的是说乌克兰，习要配合和台湾，这叫“双鹰头运动”，是吧？你取东我取西，然后在冬奥会前后。这是上次中国这个夏季奥运会的时候它不就干了克罗地亚（疑似克里米亚）嘛，是吧？这是普金的一贯的手法啊。
 
-在2019年发生的暴力仇恨犯罪锤击事件中，被杀害的华人男子的遗孀对法院的裁定感到愤怒，因其最终结果是将嫌疑人送往精神病院而不是让他在本周面对应有的惩罚。
+那么现在比较好在哪里了呢？我觉得这次普金玩的不是跟西方讲数，也不是跟欧洲讲数，我觉得普京真的是在跟习唱一场相互的，这么演一场“二人转”的戏。这个戏他绝对不是想真打的，但是很有可能演着演着就成真了。
 
-据《纽约每日新闻》报道，仇恨犯罪锤击案受害者之一 Tsz Mat Pun（50岁）的遗孀 Jennifer Pun，其批评美国司法系统在周四（27日）将37岁的嫌疑犯亚瑟·马图诺维奇（Arthur Martunovich）转移到精神病院。
+我也不觉得，我现在我不觉得，就是说习去攻台湾，美国就像咱们头两天儿我们“甜蜜蜜运动” 美国的咱们合作者问我：“你觉得习要打这个台湾，你觉得美国人是应该加入、迅速加入呢还是马上，还是看看再加入呢？还是只是说在某种方面，还是派观察员呢？也就是说当雇佣军嘛，到前边儿去支持呢？”
 
-“我以为美国的司法系统会做好自己的工作，将犯人绳之以法；他是有能力的。当他做出夺走三条生命的决定时，他是清醒的。”Jennifer Pun 通过翻译说。
+我说，这事儿还真不是你能说了算的，这完全取决于当时它要进台湾的方式和惨状，还有它进去以后想干的什么事情，最后你美国没有选择。你现在说都太早。就包括乌克兰，普京会在直接从边境上虚晃一枪，直接插入基辅的后面儿去。直取基辅，它一定会玩儿这招的。
 
-布鲁克林最高法院法官 Danny Chun 指定嫌犯为有“危险精神障碍”的马图诺维奇被认定对2019年1月15日在布鲁克林 Seaport Buffet 餐厅杀害老板 Kheong Ng-Thang、餐馆经理 Tsz Mat Pun 和他的侄子兼厨师 Fufai Pun（34岁）的事件“不负责任”。据报道，Tsz Mat Pun 和 Fufai Pun（唯一在现场被宣布死亡的受害者）从中国福建省的同一个村庄移民过来。
+因为西方人没有，任何人都不相信，说不可能攻击基辅，他不可能攻击基辅，他可以攻击基辅旁边的小镇堪城（音），他不会攻击基辅。你们没有去过乌克兰，它旁边有个小镇叫“美女模特之镇”，就那个地方。他可能到那儿去。我说：“不是的，他可能直接干到基辅去，他就是要让整个乌克兰跪下。”
 
-据 NextShark 此前报道，2021年8月，法院决定不起诉马图诺维奇，因为他患有精神疾病，受害者的家人和社区成员对此表示愤怒；在周四的法庭审判中，Jennifer Pun 和 Fufai Pun 的遗孀艾米（Amy）在场，并被看到在判决后对检察官大喊大叫。
+到那个时候也不你西方美国决定的能不能进。就是美国认为，美国会代理人战争，会让这些人上。美国不会直接参与战争，我觉得也不是美国决定。这就是为什么我觉得在未来六周以内，在基辅和在台湾发生的事情，是不可控，不可设计，而恰恰也就是“甜蜜蜜运动”我们想达到的效果。
 
-“我不相信被告有那么严重的精神疾病；他非常冷静，他能够分辨出你[原文如此]是亚洲人还是西班牙人。”Jennifer Pun 说。
+而且最后，美国被迫加入，被迫加入。为什么呀？美国内部一堆的，跟乌克兰千丝万缕的关系，也有跟俄罗斯这种千丝万缕的关系，和共产党千丝万缕关系的，这种不可控的因素，最终会成就这次邪恶的势力这次会被消灭。而且是，不是以美国人的意志为转移的，是根据情况往下发展的，我就不再细说，这就是未来六周的好戏吧。
 
-“危险的精神障碍”是一项裁决，是对面临指控的嫌疑人的“最严重类别”。FindLaw 解释说，有“危险精神障碍”的人被认为“对自己或他人构成身体危险”。纽约州的精神错乱辩护裁定，被告应被安置在由精神卫生局监管的安全设施中，未经法院批准，将不允许释放或转移。
+字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
 
-布鲁克林地区检察官奥伦·亚尼夫（Oren Yaniv）说，嫌犯马图诺维奇将被送往一个上锁的最高安全级别的精神病院。“我不相信被告有那么严重的精神疾病；他非常冷静，他能够分辨出你[原文如此]是亚洲人还是西班牙人。”Jennifer Pun 说。
+编辑整理：Jacques；
 
-据报道，Tsz Mat Pun 和 Fufai Pun（唯一在现场被宣布死亡的受害者）从中国福建省的同一个村庄移民过来；布鲁克林地区检察官奥伦·亚尼夫（Oren Yaniv）还补充说，嫌疑人在许多年内不会被释放，如果他被释放，这将使他们的办公室能够“在法官面前挑战这一决定”（康复后可能获释）。
+字幕文件制作：知津；
 
-“我们相信，他将永远不会再有机会在我们的社区实施暴力，向受害者的朋友和亲人表示最深切的慰问，并祈祷他们能够得到安宁，”亚尼夫检察官说。
+视频制作及上传：Cindy；
 
-马图诺维奇接受了中哈德逊法医精神病学中心（Mid-Hudson Forensic Psychiatric Center）医生的评估，他将继续留在该机构，并在今年七月后重新进行评估。
+G-News发布：小满；
 
-**新闻来源**：[news.yahoo.com] [Ruling that man who killed three Asian men with hammer is ‘notresponsible’ due to mental illness angers victims’ widows](https://news.yahoo.com/ruling-man-killed-three-asian-220630784.html) | 发布时间：2022年01月28日｜
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-* * *
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-***审核：文乐
-校对：小东
-发布：信心满满***
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
