--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,46 +1,21 @@
 ---
-title: 所谓史无前例的北京冬奥会一定会露馅穿帮并成就甜蜜蜜
+title: 捷报：伊维菌素终于被认可
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937035/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1937041/)
 
-G-TV视频链接：[https://gtv.org/video/id=61f77c5cd90bdd2085a2ff8a](https://gtv.org/video/id=61f77c5cd90bdd2085a2ff8a)
+撰稿：东京樱花团/闻雨
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2590.png)[图片来源](https://www.fwbusiness.com/covid-19/article_d602bf9d-afe9-5337-96c5-fd37b7e62846.html)
+东京 1月31日（路透社）报道：兴和制药公司（名古屋）1月31日表示，兴和已与北里大学完成了一项关于伊维菌素治疗中共病毒（新冠状病毒）感染的临床前研究。通过与北里大学的联合非临床研究实验，证实了伊维菌素对治疗中共病毒（新冠状病毒）感染，无论是对德尔塔（Delta）毒株还是对奥米炕（Omicron）毒株都有相同的抗病毒效果。
 
-**郭文贵先生：**听说现在在入境的时候已经发现有人携带的所谓的非法标识进去的，还高科技的材料的，已经被搜出来了，这个引起他们高度的准备啊，就法国这位被查肛门的女士就说，她说:“我要留下来我一定会裸奔，抗议共产党，我坚决回去,我不在这儿了啊。”这已经是不确定性，习本身他自己都不知道。就这几天发生的事情，已经足够他震撼了。
+伊维菌素是根据北里大学名誉教授大村智先生的研究开发的，他在2015年获得了诺贝尔生理学•医学奖。伊维菌素主要在非洲国家被用作治疗寄生虫感染。
 
-但是不管如何都不会影响，这是一场所谓“史无前例的成功的开幕式的奥运会”——一定是这结局，因为它宣传嘛。
+我们新中国联邦一直在呼吁，要求用伊维菌素治疗中共病毒，现在终于得到了证实。兴和制药公司用科学实验验证了这一切。期待着今后伊维菌素在治疗中共病毒方面发挥最大的作用。
 
-这就是我说你在你家后院，你想搭个场景，你糊弄你孩子，你什么场景都出来，变什么法子都出来，但最终你改变不了，你给你孩子变成大象也好变成蛇也好都是假的，肯定不是真的，是吧？它都会被戳穿。这个中间，怎么会不表演露掉呢？一定会有露馅，一定会穿帮的。但是都不会影响它最终……
+信息来源：[興和、「イベルメクチン」のオミクロン株への抗ウイルス効果を確認](https://news.yahoo.co.jp/articles/4924fb35eaa89d16884e9562defa71572857e2f7)
 
-但是就是要这种效果，才会成就我们的”甜蜜蜜运动”，才能成就我们的“甜蜜蜜运动”。一定会发生的。谢谢。
-
-字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
-
-编辑整理：Jacques；
-
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
