--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,44 +1,23 @@
 ---
-title: 对旧金山市一半反亚裔仇恨犯罪有责任的男子获释
+title: 冬奥会媒体中心餐厅因中共机器人“罢工”，被饿的头晕眼花
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1936485/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1935910/)
 
-翻译：wenwu
+撰稿：东京樱花团/风翼
+![](https://assets.gnews.org/wp-content/uploads/2022/01/5-42.png)图片来源
+据日本运动报知报道：参加报道的记者表示看到中共冬奥会北京主要媒体中心（MMC）的食堂的一些区域是由机器人管理。例如点炒饭时，会由机器煮好米饭和配料，并从你的座位上方将其卸下。馄饨也是由机器人制作的，并与最后的汤一起供应。还会看到一个能调制鸡尾酒的“调酒师机器人”，很有未来感。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2560.png)图片来源：news.yahoo.com
+然而，就在1月30日，即展览开幕的前一天，将食物从顶部送下来的机器人似乎发生了故障，在午餐时间段竟然等待了40分钟，记者称，自己不但饿的没力，机器好像也累的罢工了。
 
-据报道，一名应对去年旧金山一半以上反亚裔仇恨犯罪负有责任的男子已获释，这引起了整个当地社区的安全担忧。
+中共想通过冬奥会显示体制的优越性，经济的强大力量，想靠给世界洗脑来维持千秋，但就看世界有多少国家参加开幕式就能知道，踩着尸山血海的的暴政即将坍塌。
 
-37岁的德里克·巴雷托（Derik Barreto）被指控在2021年4月至8月期间针对唐人街、Ingleside 社区和 Ocean Avenue 的20家华裔企业和其他7家企业。据称，他骑着滑板车，用弹弓、钢管或锤子破坏商店的窗户，这在几个监控[视频中](https://twitter.com/DionLimTV/status/1409305353968259072?s=20&amp;t=HNWLPZkKyOZyZAusNTwe-w)可以看到。
+消息来源：
 
-据 NextShark 此前报道，在他被捕后，旧金山地区检察官办公室指控巴雷托共犯有33项罪行。其中包括27项重罪的破坏行为，4项重罪的二级盗窃，1项轻罪的拥有盗窃工具和1项轻罪的拥有隐蔽武器的罪行。
+[北京五輪の現地取材班の記者日記がスタート。スポーツ報知記者の見た、聞いた、感じた！を届けます。](https://hochi.news/articles/20220130-OHT1T51203.html)
 
-在这些指控中，有31项是仇恨犯罪的强化指控。据称，巴雷托向警方发表了带有种族色彩的声明，暗示他把受害者作为目标，因为他们是华人。
-
-本周，旧金山市政府官员报告说，从2020年到2021年，反亚裔仇恨犯罪增加了5.67倍。巴雷托的31起案件占去年总共60起仇恨犯罪案件的大部分。
-
-据报道，一名法官于9月批准了巴雷托的精神健康转移，1月26日KPIX 5报道，他目前没有被拘留，因为他在等待月底出庭。他的律师 Pam Herzig 告诉 KPIX 5，他已经选择不认罪。
-
-“有人请帮助我理解是什么精神疾病导致一个37岁的男人破坏27家亚洲人拥有的企业，”一位推特用户写道。
-
-另一个评论说，“这个卑鄙的职业罪犯在破坏财产的行为中被抓后，甚至没有被关进监狱。”
-
-这一消息传出后，社区倡导者批评了现行刑事司法政策的宽松，其中包括一名69岁的美籍越南人，他对旧金山地区检察官办公室提起[联邦诉讼](https://nextshark.com/anh-le-suffering-files-federal-suit-against-sf-district-attorney/)，指控该办公室在他不知情的情况下与袭击者达成了认罪协议。
-
-纽约州州长凯西·霍赫尔（Kathy Hochul）说，她准备利用她的权力迫使曼哈顿地区检察官 Alvin Bragg 改变他对起诉的宽松做法。；[对布拉格（Bragg）政策的担忧](https://nextshark.com/man-shoved-asian-woman-nyc-subway/)是在米歇尔·戈（Michelle Go）之死后出现的，袭击者被发现有10次被捕的经历。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2562.png)图片来源：news.yahoo.com
-
-“我有选择，但我将非常密切地关注这一情况，”霍赫尔州长周三告诉《[纽约邮报](https://nextshark.com/anh-le-suffering-files-federal-suit-against-sf-district-attorney/)》（如上图，图片来自纽约邮报）。“我很清楚州长所拥有的权力——我将很快进行一次谈话来传达，让他告诉我他的计划是什么，并确保我们都能保持一致。”
-
-新闻来源：[news.yahoo.com] [SF man allegedly responsible for half of the city’s anti-Asian hatecrimes in 2021 released from custody](https://news.yahoo.com/sf-man-allegedly-responsible-half-003342965.html) | 发布时间：2022年01月28日
-
-* * *
-
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/西喜.jpeg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
