--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,35 +1,51 @@
 ---
-title: 澳洲冬奥会代表团一人测试呈阳性后再转阴性
+title: 中共病毒武毒所起源论被福奇等人淡化
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1935822/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1935350/)
 
-**整理/编辑：小红帽**
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2554.png)
-
-图片来源：雅典娜设计组
+作者：纽约磐石农场—在远方
 
 
-根据《澳大利亚人报》1月31日报道，澳大利亚冬奥代表团的一名成员被中共极端的新冠病毒（Covid）检测程序所拦截。该名运动员在抵达北京国际机场时得到了一份阳性检测报告，但后来证明是该检测结果是阴性的。
 
-由于隐私原因，澳大利亚队官员未透露这名运动员的姓名，但证实此人于周末抵达中国，最初的阳性结果来自于其降落后直接采集的核酸（PCR）样本。
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
-澳大利亚代表团团长Geoff Lipshut说：“这是一个令人担忧的问题，但这只是第一次测试。”然而，第二次测试后来得出了不同的结果，为该运动员可能参加比赛开辟了道路，但还需要再做一次测试。
 
-中共为阻止新冠病毒的传播而采取的高压手段受到了批评，因为他们使用了超敏感的设备，这可以从外国运动员身上检测出以前感染新冠病毒的残留。这导致了病例数量的激增，已经毁掉了一些运动员的奥运梦想。
 
-到目前为止，只有12名澳大利亚运动员抵达中共国，预计大多数人将在周五的开幕式前几天抵达。
+1月30日，郭文贵先生盖特转发了福克斯新闻的一个节目视频。该节目显示，有内部文件揭露出，中共病毒武汉实验室起源论，被诸如福奇等所谓的“科学家”故意淡化了。
 
-新闻链接：[严苛Covid检测震动北京冬奥 澳洲代表团一人测试阳转阴](https://cn.theaustralian.com.au/2022/01/31/63035/)
+根据来自美国国立卫生院的内部信息，在中共病毒爆发初期，有人告知福奇，病毒可能来自中共武毒所，而福奇领导的传染病研究所，通过生态联盟间接资助了武毒所。还有专家表示，中共病毒经过了基因改造。
 
-*发布：盘古相聚*
+之后，福奇与全世界十几位病毒学家召开了电话会议，记录显示对武毒所泄露病毒的怀疑被压制。他们认为公开披露中共国的参与，会损害科学和国际和谐。然后，研究人员撰写了初步研究结果，放弃了病毒可能是实验室泄漏的看法，并于2月份在网络，3月份在《自然医学》杂志发表，称中共病毒不是实验室制造，或者故意操纵的病毒。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide8-11.jpg)
+但其他多方消息证明，武毒所就是中共病毒的来源地，中共对病毒真相的隐瞒，可能是有史以来最大的政府掩盖。在川普总统表示要对此开展调查的时候，国立卫生研究院主任柯林斯发邮件给蝠奇，商讨如何能制止病毒来自武毒所的说法。之后福奇在记者会上，公开支持海鲜市场来源论。他说病毒的变异，已经完全达到了从一种动物跳到人类的程度。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+而先前两位不同意自然说后来却改口的专家，以及生态健康联盟的皮特.达扎克，则分别获得了福奇900万美和750万美元的资助经费。
+
+参考信息：
+[内部文件揭示中共病毒武汉实验室起源论被诸如福奇等所谓的”科学家“淡化](https://www.gettr.com/post/prbedtf209)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
+
+总编/编辑：飞虹
+校对/发稿：为真不破20
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
 
  
 
