--- a/gnews/53.md
+++ b/gnews/53.md
@@ -1,72 +1,128 @@
 ---
-title: 【Michael.Tonny专栏】Rubio等参议员提起冠状病毒起源验证调查与确定法案
+title: 独家报道：奥地利联邦宪法法院就强制新冠疫苗接种令照会卫生官员质疑其合法性
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1932953/)
+`英国伦敦喜庄园德语 Himalaya London Club UK-DE` [轉載自GNews](https://gnews.org/zh-hans/1930543/)
 
-作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
-2022年1月10日，Rubio、Cramer等共和党参议员提起《冠状病毒起源验证、调查与确定法案》（[Coronavirus Origin Validation, Investigation, and Determination Act of 2022](https://senatorkevincramer.app.box.com/s/jg99e0fst27w90qbsqjsmnzeokb6z1vc)，简称COVID Act of 2022或新冠病毒法案），如果美国总统不能在本法案颁布之日起90天内证明中共国政府允许国际法医专家进入包括中国科学院武汉病毒研究所在内的武汉可疑实验室进行透明调查，美国总统将对中科院、中国共产党、解放军、国务院官员，以及起初涉及掩盖疫情的人士祭出制裁措施。
+简评：瞌睡猫
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Bill-investigation-into-the-origins-of-COVID–19-at-suspect-laboratories-in-Wuhan.jpg)
+翻译：英喜德语组幺蛾子，澜磬筱竺，Miao，Wistaria，Luckycky
+![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-29-235422.jpeg)图片来源：2022年1月28日官网截屏/ 奥地利联邦宪法法院
 
-这一法案是由共和党参议员RUBIO、SCOTT、CORNYN、SCOTT、CRAMER、MARSHALL、DAINES、GRASSLEY、LANKFORD、SASSE、TUBERVILLE、HYDE-SMITH共同提起。
+简评：
 
-中共向全世界发动生化武器战争的两年多来，中国共产党 (CCP) 一直在阻止所有试图揭露COVID-19真正起源的努力 。病毒起源于中共国武汉，但中共试图掩盖真相的企图导致全世界无数人死亡和遭受不必要的痛苦。显然，CCP只会回应来自美国和国际社会的一致压力。这一法案将迫使中共坐到谈判桌前。
+经奥地利国会内部人士爆料，奥地利宪法法院Dr. Andreas Hauer大法官于2022年1月22日向奥地利联邦社会事务、健康、护理和消费者保护部发出正式照会，要求该部部长 Wolfgang Mückstein 于2月18号之前到国家宪法法院就其目前所实施各种针对CCP病毒的强制措施，包括对未接种人群实施的残酷无情的有差别强制隔离措施进行一些列的答辩。 这个时刻联邦宪法法院发出照会，笔者认为，象征了奥地利法律系统开始关注这一系列行政措施开始关注这一系列行政措施是否具有合理性，是否有必要实施。
 
-中共病毒溯源，是全球灭共，中共彻底灭亡的关键一步！
+目前，奥地利是欧洲第一个通过新冠疫苗接种强制令的国家，也是为数不多几个对未接种人群进行强制隔离的国家。尽管实施了最严格的隔离和新冠疫苗接种政策，奥地利CCP病毒感染新增案例居高不下，在1月28日截稿日更达到了前所未有的38681新增病例。我们不仅要问，到底是没打新冠疫苗的人群还是打了新冠疫苗的人群在得病并传播病毒？到目前为止奥地利政府和卫生部门不仅就这些问题没有给出明确答案，而且还一而再再而三地歧视未接种CCP病毒疫苗人群，并且以罚款等各种名义胁迫百姓接种CCP病毒实验性新冠疫苗，这种新冠疫苗不可靠，有严重副作用，甚至有死亡的危险。奥地利政府所采取和颁布的各项措施充满争议，不光引起了民众的反感，在全国各地进行大游行，如今也引来了奥地利宪法法院的密切关注和法律介入。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/640px-Wuhan_Institute_of_Virology_main_entrance.jpg)
+1月14日美国最高法院否决了拜登政府对雇员超过百名公司的强制接种及检测行政命令，打开了美欧民主国家各国最高立法机构介入并阻止执法部门利用抗击CCP新冠病毒的名义进行无限制扩充权力的先例。现在奥地利宪法法院紧跟其后，将给在欧洲各国政府强制新冠疫苗，强制隔离越权最严重的奥地利带来转机。Dr. Andreas Hauer大法官发出的照会思维严谨，不带有任何政治倾向，所有问题紧紧围绕科学数据和法律，将对其它欧洲各国依法反对强制新冠疫苗和隔离的斗争起到一个很好的榜样作用。
 
-如果美国总统不能在本法案颁布之日起90天内证明中共国政府允许国际法医专家进入包括中共国科学院武汉病毒研究所在内的武汉可疑实验室进行病毒溯源透明调查，美国总统将实施以下制裁：
+法令发自：
 
-1.对个人的制裁
+**宪法法院 **
 
-在中国科学院及其附属机构、研究所和实验室、地方分支机构和大学担任领导职务的个人；
+弗赖翁 8，1010 维也纳
 
-政府官员包括，中国共产党、中国人民解放军或国务院，包括其下属国家机关，如工信部、卫健委、中国疾病预防控制中心、外交部、应急管理部和公安部；
+V 11/2022-4
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/shi-li-shan-lu-bu-huan-jian.jpg)
+法令发至：
 
-COVID-19病毒爆发初期参与了隐瞒的社会团体，知道病毒严重性、参与疫情爆发信息封锁以及阻碍对病毒溯源调查的相关人员。
+**联邦社会事务，卫生部，护理和消费者保护部部长**
 
-2.禁止联邦资金为在任何学术领域的美国和中科院研究人员提供资助，包括那些受雇于中国科学院下属研究所和实验室，中科院地方分支机构或大学，或由中科院和中科院资助创建或创办的中华人民共和国境内科技企业；
+Stubring 1
 
-3.领取联邦经费的美国研究人员或机构，也不得与中共国人员或机构合作进行病毒功能增强研究。
+1010 维也纳
 
-具体制裁手段将包括冻结相关人士在美资产、禁止他们入境美国、撤销现有签证等。
+在上述法令审查程序中，根据 宪法法院法（VFGG） 第 5 20 条第 3 款， 也是为了准备可能的口头听证会 – 要求在 2022 年 2 月 18 日之前提供以下信息：
 
-中共发动生化武器战争以来，已导致全世界3.73亿人感染，杀死566万人，仅仅过去28天内，全世界就有8,313万人感染。仅美国就有7,424万人被感染，死亡89万人。随后的COVID-19病毒疫苗，给全世界带来巨大的灾难。
+1. 在根据 COVID-19-措施法（COVID-19-MG） 发布的法令文件中，特别提到了因新冠病症入住普通或重症监护病房以及死亡的人数。 引用2021 年 10 月 11 日《新闻》日报报道（“接种过疫苗的人也住院：疫苗有效吗？”）为例子，根据官方信息“如果患者因肾功能衰竭住进重症监护室，并且偶然因新冠病毒检测结果呈阳性”，则将其归为 “新冠病例”。
 
-国际社会对中共病毒溯源的要求越来越强烈，中共不断造遥是美国制造并故意投毒！
 
-1月23日，中共媒体昆仑策发文《[中方制裁果然没错！新冠溯源有重大发现，“美投放病毒”传遍国际](http://www.kunlunce.com/ssjj/fl11/2022-01-23/158403.html)》，称“美国一直不肯配合国际专家进行调查”，“美国很有可能是新冠病毒的源头”，“拜登政府必须给予全世界人民一个合理的交代”，“中国蒙受了这么长时间的‘不白之冤‘，美国必须道歉！”。
+因此，宪法法院要求提供信息，法令文件中给出的住院或死亡人数是否包括所有在医院被安置在普通或重症监护病房中的新冠病毒感染者，无论是直接死于新冠病毒还是带着新冠病毒而死的人。 如果是，为什么选择这种计算方式？此外，宪法法院要求—如有必要—按以下方式对这些数字进行分类:
 
-早在2021年8月18日，中共官媒人民日报和人民网就刊登文章《[美国科学家长期研究人工冠状病毒合成技术（深度观察）](http://world.people.com.cn/n1/2021/0818/c1002-32197375.html)》，称“国际舆论呼吁，为提高透明度，世界卫生组织应对德特里克堡生物实验室等进行调查，这一行动应被视为寻找新冠病毒起源的积极步骤”。
+-新冠病毒直接导致病人死亡，病人带着新冠病症而死亡和病人生前无新冠病毒感染症状。
 
-2021年8月23日，中共外交部发言人汪文斌在回答澎湃新闻记者提问时说，“美国是重组病毒研究开展得最早、能力最强的国家，也是全球冠状病毒研究的最大资助者和实施方”，“只要调查巴里克团队及其实验室，就可以澄清对冠状病毒的研究有没有、会不会产生新冠病毒”，同时汪还公开质问美国，“美国什么时候邀请世卫专家到北卡大学生物实验室和德堡‘美国陆军传染病医学研究所’去进行调查呢？”
+-病人因新冠病症住进重症监护室，病人因其它病症住进重症监护室，但同时也伴有新冠病毒症状，以及最后病人因其它病症住进重症监护室且感染了新冠病毒（无症状或轻度病症不需要住院）。
 
-中共对中共人民犯下滔天罪行，种族灭绝罪和反人类罪！中共在2019年底2020年初向全世界投放COVID-19病毒，发动生化武器战争，对全人类的继续生存造成巨大威胁。
+— 因新冠病症而在普通病房住院的人，因其它病症而在普通病房住院，但也感染了新冠病毒的人，以及因其它病症在普通病房住院且（无症状或病症轻微本身不需要住院）感染了新冠病毒的人。
 
-相信Rubio、Cramer等美国参议员的这一提案很快就会得到通过，最终将给美国人民和世界满意的答案。
+宪法法院试图提供各自的数字，一方面是总数（按年龄组划分），另一方面是2022年1月25日的数字。
 
-共惨党，你完了！Take Down CCP!
+2. 因新冠病毒在普通病房和重症监护病房住院的人以及因新冠病毒死亡的人年龄的平均值和中位数分别是多少？
 
-参考资料：
+3.1. 按年龄组和性别划分，每10万个疾病病例的死亡人数分别是多少？按年龄组和性别划分，每10万个疾病病例中在普通或重症监护病房住院的人数分别是多少？
 
-[Coronavirus Origin Validation, Investigation, and Determination Act of 2022](https://senatorkevincramer.app.box.com/s/jg99e0fst27w90qbsqjsmnzeokb6z1vc)
+3.2. 按年龄组和性别划分，每10万名感染者的死亡人数分别是多少？按年龄组和性别划分，每10万名感染者在普通或重症监护病房住院的人数分别是多少？
 
-[Coronavirus Origin Validation, Investigation, and Determination Act](https://www.cramer.senate.gov/news/press-releases/sen-cramer-colleagues-introduce-bill-to-sanction-beijing-for-obstruction-of-covid-origins)
+3.3 按年龄组和性别划分，每10万名居民的死亡人数分别是多少？按年龄组和性别划分，每10万名居民中在普通或重症监护病房住院的人数分别是多少？
 
-[2021年8月23日外交部发言人汪文斌主持例行记者会](https://www.mfa.gov.cn/web/wjdt_674879/fyrbt_674889/202108/t20210823_9177433.shtml)
+4. 在2022年1月1日，2022年1月25日和（回答此问题时）当日的感染者、住院者和死亡者中存在哪些病毒变种，其比例各占多少？
 
-[美国科学家长期研究人工冠状病毒合成技术（深度观察）](http://world.people.com.cn/n1/2021/0818/c1002-32197375.html)
+5.  在生活方面（比如家庭、工作、购物（基本日用品、其他商品）、各种休闲活动）发生感染，其对应的比例是多少？
 
-[中方制裁果然没错！新冠溯源有重大发现，“美投放病毒”传遍国际](http://www.kunlunce.com/ssjj/fl11/2022-01-23/158403.html)
+6. 在室内或着室外佩戴FFP2口罩会以什么因素降低病毒感染或传染的风险？
 
-[COVID-19 Dashboard by the Center for Systems Science and Engineering (CSSE) at Johns Hopkins University (JHU)](https://www.arcgis.com/apps/dashboards/bda7594740fd40299423467b48e9ecf6)
+7. 疫苗接种率（按照接种第一、第二和第三剂细分）在各年龄组中是如何分布的？
 
-编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+7.1. 关于欧米克隆（Omikron）感染，下面四组人群中平均7天发病率是多少：2022年1月未接种新冠病毒疫苗的人；接种了第二剂、但尚在接种后14天内的人；已完成“基本免疫” （尚未接种第三剂“加强针”）的人；已接种加强针的人？
 
+7.2. 接种新冠病毒疫苗后减少发展为重症的几率为多少？媒体的说法是可达95%。目前，总体（不分年龄和健康状况）死于新冠病毒的风险（参照流行病学报告系统数据（AGES-Dashboard））似乎为0.1516%。95%的疫苗接种有效率指的是什么？在这种情况下，绝对和相对风险降低又指什么？
+
+7.3. 接种第一、第二和第三剂疫苗能在多大程度上降低因感染新冠病毒在普通病房或重症监护室住院的风险、或因感染新冠病毒死亡的风险？这一程度是否取决于（流行的）变种病毒？
+
+7.4. 据媒体报道，新冠病毒疫苗的保护作用会随着时间的推移而减弱。 这是真的吗？那么在接种第二剂最常用疫苗后的三个月、六个月和九个月以后，这一保护系数有多高？请说明每种情况下的绝对和相对风险的降低。
+
+7.5. 在直接因新冠病毒导致住院和因其它病症导致住院，但同时携带新冠病毒的人中，接种第一、第二和第三剂疫苗的人各占多少？
+
+7.6. 接种了新冠病毒疫苗的人也可能感染SARS-CoV-2、罹患新冠病毒症并传播SARS-CoV-2。这似乎与当前的科学状况相符。接种新冠病毒疫苗能在多大程度上降低感染、患病和传播的风险？如果这些取决于接种疫苗的数量和/或自上一次接种疫苗以来的时间，请提供详细的数据。
+
+8.1. 在新冠病毒(§2第2段第3项，COVID-19-SchuMaV经BGBI.I|24/2022修订) 分子生物学测试呈阴性后，排除被测者在检测后72小时内将新冠病毒传染给其他人的概率有多少？考虑到潜伏期：检测（阴性）后多久可以排除（最高概率）这名阴性被测者可传播新冠病毒？
+
+8.2. 在三个月，六个月或八个月前接种第二次疫苗后的新冠病毒感染者，与未接种疫苗、24小时前PCR检测结果呈阴性的人相比，他的传播风险有多高？
+
+9.1.  一个未接种疫苗的25岁的人在一年内因新冠病毒住院（普通病房或重症监护室）的风险有多高？
+
+9.2.  一个25岁的人，两次接种奥地利最常用的疫苗后，在第三、第六和第九个月因新冠病毒住院（普通病房或重症监护室）的风险，平均在一年内有多高？
+
+9.3.  一个未接种疫苗的65岁老人在一年内因新冠病毒住院（普通病房或重症监护室）的风险有多高？
+
+9.4. 一个65岁的老人，在两次接种奥地利最常用的疫苗后在第三、第六和第九个月，因新冠病毒住院（普通病房或重症监护室）的风险，平均在一年内有多高？
+
+9.5.1. 所谓的“对未接种疫苗者的封锁 ”并不能排除例如在家庭或工作中的感染，但是或许能避免在宾馆中的感染。参照感染风险在生活领域的归类（上面第5点）： “对未接种疫苗者的封锁 ”会使未接种疫苗者的感染风险降低多少个百分点（基数为：没有 “对未接种疫苗者的封锁 ”的感染风险=100）？
+
+9.5.2. 除其它外， “对未接种疫苗者的封锁” 可能是基于以下考虑：未接种新冠病毒疫苗的人比接种疫苗的人的住院风险更高，这可能会给卫生系统带来更大的风险。现在，住院的风险也可能在很大程度上取决于年龄，疫苗接种率可能因年龄组而异。无论如何，所有年龄组的“第二剂疫苗”接种覆盖率应该在75%左右，感染的发生率也可能在不同的生活领域有不同的分布，据此，对未接种疫苗者的“封锁”可能只排除了他们的某些感染源。考虑到这些参数以及第二剂疫苗接种降低风险的程度： “对未接种疫苗者的封锁”对医院负担的影响百分比是多少？
+
+或者在绝对数量上，AGES仪表板显示: 2022年1月24日，普通病房有1049名新冠病毒患者，重症监护病房有194名新冠病毒患者。如果没有 “对未接种疫苗者的封锁”，那普通病房或重症监护病房的床位占用率预期会提高多少？
+
+《标准日报》在2021年12月2日以 “新冠病毒受害者比去年秋天少，但死亡率超高 ”为题进行了报道。
+
+与前一年相比，患新冠病毒的死亡人数减少了三分之一，但同时每周的超常死亡率却达到三位数，这是真的吗？
+
+如果是这样，2021年人们并非死于冠状病毒的总超常死亡率有多高? 这种超常死亡率如何解释?
+
+2022.01.26 维也纳
+
+宪法法院
+
+Dr. Hauer
+
+发送至:
+
+联邦社会事务、卫生、护理和消费者保障部长 Stubenring 1
+
+Unterzeichner 签名
+
+Darum/Zeit 日期/时间
+
+Aussteller Zertifikat 签证人证书
+
+本文件已经正式签署
+
+关于验证电子印章或电子签名的信息可以在以下网站找到。
+
+原文：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-29-235855.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-001512.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-095424.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-095430.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-095434.jpeg)
+校对：英喜德语组 Luckycky，貓聲，Wistaria，Nena，澜磬筱竺/ 审核：貓聲，Charles / 发布：Luckycky
+![](https://assets.gnews.org/wp-content/uploads/2021/09/战鹰团新logo2021-07-01-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
