--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,21 +1,43 @@
 ---
-title: 美提书面答复 力促俄奉行外交路线化解乌克兰危机
+title: 不管冬奥会成功还是失败最大的可能性是习近平会打台湾
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/1937086/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937097/)
 
-[撰稿日期]：2022.1.27
+G-TV视频链接：[https://gtv.org/video/id=61f77d62d90bdd2085a3000a](https://gtv.org/video/id=61f77d62d90bdd2085a3000a)
 
-[署名]：台湾宝岛农场dobi
+**Eglise: **我就是关心，我关心可能更多的还是台湾。如果这次冬奥会按照这个习近平的标准它是胜利结束了，他是不是能够放下想攻打台湾的意向？如果这个冬奥会是个失败的，他可能会？七哥您是这个意思吧？
 
-[新闻连接]： 《https://udn.com/news/story/122663/6063923?from=udn-catelistnews\_ch2》
+**郭文贵先生：**我觉得成功与失败他都会打台湾，我基本上我觉得。他没有失败的，他一定不管什么，失败他也说成赢了。就像路大脑袋，像欺民贼一样，永远他们赢了。郭宝胜在法庭出来，你还记得郭宝胜出来，对着夏业良（说）：我们赢了。还有那个什么，叫叶什么的给了当律师的是吧？他说：我替你省了一百万。这就是他们的心理状态嘛是吧？他一定说我赢，不管什么情况都说我赢。
 
+但是我觉得不管什么结果他都会打台湾。这是，现在他必须打的，只有很少的可能不打台湾，所以说咱们看着吧。
 
+字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
 
-在俄罗斯和乌克兰冲突一触即发的危机局势中，俄罗斯要求北约和美国不得同意乌克兰加入北约盟国，并反对北约盟国提供乌克兰安全协助，泛称为「北约东扩」。针对俄罗斯的要求，美国和北约盟友目前虽仍未松口，但美国答应以书面方式回复俄罗斯；北约也在26日向俄罗斯大使馆交付书面答复，并宣称北约与美国立场一致，呼吁俄罗斯退兵。
+编辑整理：Jacques；
 
-美国国务卿布林肯（Antony Blinken）表示，就看俄罗斯反应，美国准备好进入下一步协商，力促俄罗斯奉行外交路线。
+字幕文件制作：大好河山；
 
-俄罗斯外交部长拉夫罗夫（Sergey Lavro）则表示，若不满意美方答复，不会坐视俄罗斯的要求陷入无尽的讨论，且若西方持续胁迫，莫斯科将会采取必要的报复作为。
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
